--- a/CV.Rmd
+++ b/CV.Rmd
@@ -1,40 +1,49 @@
 ---
-name: Mitchell O'Hara-Wild
+name: Jacob Timothy Wittman
 date: "`r format(Sys.time(), '%B, %Y')`"
-qualifications: BCom(Hons), BSc
-position: Data Scientist
-address: 58 Madeleine Rd, Clayton
-phone: +61 408 259 421
-email: mail@mitchelloharawild.com
-website: mitchelloharawild.com
-github: mitchelloharawild
-linkedin: mitchelloharawild
-twitter: mitchoharawild
+qualifications: BSc, MSc
+position: PhD Student
+address: 1980 Folwell Avenue, St. Paul, MN
+phone: 319 651 9490
+email: wittja01@gmail.com
+github: wittja01
+linkedin: wittja01
+twitter: wittja01
 headcolor: 414141
-output: vitae::awesomecv
+output: 
+  vitae::awesomecv:
+    keep_tex: true
 ---
 
 ```{r setup, include=FALSE}
-library(tidyverse)
-library(vitae)
+if (!require(pacman)) install.packages("pacman")
+pacman::p_load(tidyverse)
+pacman::p_load(vitae)
 knitr::opts_chunk$set(echo = FALSE)
 ```
+
+```{r, include = FALSE}
+# Instructions for Education section
+# If you want to add more than one bullet point of detail, it looks like you
+# need to copy the entire tribble line verbatim and add another detail at the 
+# end of the new line
+```
+
 
 # Education
 ```{r}
 tribble(
   ~ degree, ~ uni, ~ loc, ~ dates, ~ details,
-  "BCom (Hons) in Econometrics", "Monash University", "Clayton, Australia", "Mar. 2017 - Nov. 2017", "GPA of 3.875, WAM of 86.625",
-  "BCom (Hons) in Econometrics", "Monash University", "Clayton, Australia", "Mar. 2017 - Nov. 2017", "Best in class for: Advanced statistical modelling (ETC3580), Bayesian time series econometrics (ETC4541), Applied econometrics 2 (ETC4410), Advanced topics in computational science (FIT4012), Honours Research Project (ETC4860)",
-  "BCom in Econometrics, BSc in Mathematical statistics and Computational Science", "Monash University", "Clayton, Australia", "Mar. 2013 - Nov. 2016", "GPA of 3.688, WAM of 85.385",
-  "BCom in Econometrics, BSc in Mathematical statistics and Computational Science", "Monash University", "Clayton, Australia", "Mar. 2013 - Nov. 2016", "Mentored in the Access Monash Ambassador Program (2015 and 2016)",
-  "BCom in Econometrics, BSc in Mathematical statistics and Computational Science", "Monash University", "Clayton, Australia", "Mar. 2013 - Nov. 2016", "Participated in the Vice-Chancellor's Ancora Imparo Student Leadership Program (2014)",
-  "BCom in Econometrics, BSc in Mathematical statistics and Computational Science", "Monash University", "Clayton, Australia", "Mar. 2013 - Nov. 2016", "Best in class for: Business analytics (ETC3450), Business forecasting (ETC2450), Algorithms and data structures (FIT2004), Time series analysis for business and economics (ETC3450)"
+  "PhD Entomology, Concetration: Forest Entomology, Minor: Biostatistics", "University of Minnesota", "St. Paul, MN", "Sept. 2018 - 2022 (anticipated)", "Dissertation Topic: Emerald ash borer biocontrol modeling",
+  "MSc Entomology, Concetration: Forest Entomology", "University of Minnesota", "St. Paul, MN", "Jun. 2016 - Sept. 2018", "GPA of 4.00",
+  "MSc Entomology, Concetration: Forest Entomology", "University of Minnesota", "St. Paul, MN", "Jun. 2016 - Sept. 2018", "Thesis Title: Effects of host type and food deprivation on the movement behavior of late-instar larvae of gypsy moth Lymantria dispar (Lepidoptera: Erebidae)",
+  "Teaching License in Secondary Education Biology", "Luther College", "Decorah, IA", "Sept. 2012 - Dec. 2013", "GPA of 4.00",
+  "BA in Biology & Environmental Studies", "Luther College", "Decorah, IA", "Sept. 2008 - May 2012", "GPA of 3.68"
 ) %>% 
   detailed_entries(degree, dates, uni, loc, details)
 ```
 
-# Experience
+# Teaching Experience
 ```{r}
 tribble(
   ~ role, ~ company, ~ loc, ~ dates, ~ details,
@@ -56,11 +65,28 @@ tribble(
 
 \newpage
 
-<!-- # Relevant Skills -->
-<!-- ```{r} -->
-<!-- cvskill("Data Analysis", c("Visualisation", "Data Cleaning", "Forecasting", "Modelling", "Communication", "Inference", "Machine Learning", "Web Scraping")) -->
-<!-- cvskill("Programming", c("R", "Python", "SQL", "Java", "C", "C++", "HTML/CSS", "TeX", "MATLAB")) -->
-<!-- ``` -->
+
+
+```{r pubs}
+bibliography_entries("bibs/publications.bib", 
+                     title = "Publications") %>%
+  filter(bibtype == "Article") %>% 
+  arrange(desc(year), author)
+```
+
+## Presentations
+
+  * __Wittman, JT__, and BH Aukema (2018). _Effects of host foliage on the movement behavior of larvae of gypsy moth (Lymantria dispar)._ Oral presentation at the Entomological Society of America, Annual Meeting, November 11 – 14, Vancouver, British Columbia, Canada.
+  * __Wittman, JT__, PH Chaloux, SW Myers, and BH Aukema (2018). _Keeping gypsy moth where they are: Investigating how far gypsy moth larvae can move._ Oral presentation at the Western Forest Insect Work Conference, March 26 - 29, Denver, CO.
+  * __Wittman, JT__, PH Chaloux, SW Myers, and BH Aukema (2018). _Developing science to support practice: Determining distances required to protect log decks from wandering gypsy moth larvae._ Poster presentation at the USDA Interagency Forum on Invasive Species, January 9 – 12, Annapolis, MD.
+  * __Wittman, JT__, SW Myers, PH Chaloux, and BH Aukema (2017). _Evaluating gypsy moth (Lymantria dispar) larval movement potential and effective barriers limiting their movement._ Oral presentation at the Entomological Society of America, Annual Meeting, November 5 – 8, Denver, CO.
+  * __Wittman, JT__, SW Myers, PH Chaloux, and BH Aukema (2017). _Supporting policy with science: Are buffer zones around wood products effective at preventing the spread of gypsy moth (Lymantria dispar)._ Oral presentation at the International Union of Forest Research Organizations - Forest Insects and Pathogens in a Changing Environment: Ecology, Monitoring, and Genetics, September 11 – 15, Thessaloniki, Greece.
+  * __Wittman, JT__, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _Evaluating the effectiveness of buffer zone practices in preventing the spread of gypsy moth (Lymantria dispar)._ Oral presentation at the Gypsy Moth Program Advisory Committee Meeting, November 22, St. Paul, MN.
+  * __Wittman, JT__, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _I Would Walk 500 Miles: Orientation and Movement Potential of Gypsy Moth Larvae in a Simulated Lumber Yard._ Oral presentation at the Annual Gypsy Moth Review, October 25 – 27, Columbus, OH.
+  * Nicoll, RA, __JT Wittman__, SW Myers, D Lance, and BH Aukema (2016). _Do buffer zones prevent the spread of gypsy moth (_Lymantria dispar_) larvae?_ Poster presentation at the Upper Midwest Invasive Species Conference, October 16-19, La Crosse, WI.
+  * __Wittman, J.__, E Stivers, and KJ Larsen (2016). _Bees, Butterflies and Beetles: A Comparison of Remnant and Planted Prairies in Northeast Iowa._ Oral presentation at the Day of Insects, April 9, Ames, IA.
+  * Stivers, E, __JT Wittman__, and KJ Larsen (2015). _A comparison of adult butterfly communities on remnant and planted prairies in Northeast Iowa._ Poster presentation at Entomological Society of America, 63rd Annual Meeting. November 14 – 18, Minneapolis, MN.
+  * __Wittman, JT__, A Weckwerth, and J Enos-Berlage (2012). _Exploring the Dry Run Creek Watershed: Molecules, Microbes, and Macroinvertebrates._ Poster presentation at the Iowa Water Conference. March.
 
 # Awards & Achievements
 ## Awards
