--- a/README.Rmd
+++ b/README.Rmd
@@ -14,3 +14,5 @@ knitr::opts_chunk$set(
 
 This repository contains the source files used to build my CV with my `vitae` package.
 You can learn more about the vitae package here: [https://github.com/ropenscilabs/vitae](https://github.com/ropenscilabs/vitae)
+
+This repository was originally mirrored from [Mitchell O'Hara-Wild](https://github.com/mitchelloharawild/CV).
