--- a/CV.Rmd
+++ b/CV.Rmd
@@ -1,7 +1,7 @@
 ---
-name: Jacob Timothy Wittman
+name: Jacob T. Wittman
 date: "`r format(Sys.time(), '%B, %Y')`"
-qualifications: BSc, MSc
+qualifications: BA, MSc
 position: PhD Student
 address: 1980 Folwell Avenue, St. Paul, MN
 phone: 319 651 9490
@@ -10,6 +10,7 @@ github: wittja01
 linkedin: wittja01
 twitter: wittja01
 headcolor: 414141
+fontsize: 30pt
 output: 
   vitae::awesomecv:
     keep_tex: true
@@ -19,6 +20,7 @@ output:
 if (!require(pacman)) install.packages("pacman")
 pacman::p_load(tidyverse)
 pacman::p_load(vitae)
+pacman::p_load(lubridate)
 knitr::opts_chunk$set(echo = FALSE)
 ```
 
@@ -27,7 +29,14 @@ knitr::opts_chunk$set(echo = FALSE)
 # If you want to add more than one bullet point of detail, it looks like you
 # need to copy the entire tribble line verbatim and add another detail at the 
 # end of the new line
+
+# Things to add
+  # - Manuscript review service
+  # - Update Stivers et al. once published
+  # - ESA, Non-thesis seminar, AGMR 2019
+  # - If funded, Farm Bill trapping grant
 ```
+
 
 
 # Education
@@ -47,18 +56,17 @@ tribble(
 ```{r}
 tribble(
   ~ role, ~ company, ~ loc, ~ dates, ~ details,
-  "Teaching Associate", "Monash University", "Caulfield & Clayton, Australia", "S1 2016 - Present", "Advanced statistical modelling (ETC3580)",
-  "Teaching Associate", "Monash University", "Caulfield & Clayton, Australia", "S1 2016 - Present", "Business forecasting (ETF3231/ETF5231)",
-  "Teaching Associate", "Monash University", "Caulfield & Clayton, Australia", "S1 2016 - Present", "Mathematics for business (ETF2700)",
-  "Teaching Associate", "Monash University", "Caulfield & Clayton, Australia", "S1 2016 - Present", "Data modelling and computing (ETC1010)",
-  "Research Assistant", "Monash University", "Clayton, Australia", "Jan. 2016 - Present", "Supervisors include Rob Hyndman, Dianne Cook, and George Athanasopoulos.",
-  "Research Assistant", "Monash University", "Clayton, Australia", "Jan. 2016 - Present", "Consulting projects with DiabetesLab, Tennis Australia, Monash University and Huawei.",
-  "Research Assistant", "Monash University", "Clayton, Australia", "Jan. 2016 - Present", "Contributed to the development of numerous open source R packages.",
-  "Volunteer", "Rotaract", "Monash, Australia", "Feb. 2013 - Nov. 2016", "Development and maintenance of club website and online services.",
-  "Volunteer", "Rotaract", "Monash, Australia", "Feb. 2013 - Nov. 2016", "Organising and hosting fundraisers.",
-  "Student Ambassador", "Google", "Sydney, Australia", "Feb. 2015 - Nov. 2015", "Supported Google's presence on campus with events and media.",
-  "Data Mining (Internship)", "iSelect", "Cheltenham, Australia", "Feb. 2015 - Mar. 2015", "Improved business data and issue reporting with interactive visualisations, and model-based anomaly detection.",
-  "Fresh Produce", "Coles", "Rowville, Australia", "Oct. 2010 - Nov. 2015", "Food preparation & display, first aid, staff training and customer assistance."
+  "Guest Lecturer", "University of Minnesota", "St. Paul, MN", "Sept. 2019", "Forest Entomology (ENT 4251)",
+  "Teaching Assistant", "University of Minnesota", "St. Paul, MN", "Sept. 2018 - Dec. 2018", "Insect Biology (ENT 1005)",
+  "Science Teacher", "DREAM Technical Academy", "Willmar, MN", "Jun. 2014 - Jun. 2016", "Grades 7 - 12",
+  "Long-Term Substitute - Biology", "Faribault High School", "Faribault, MN", "Feb. 2014 - Apr. 2014", "Biology (Grade 11)",
+   "Long-Term Substitute - Biology", "Faribault High School", "Faribault, MN", "Feb. 2014 - Apr. 2014", "Integrated Life Science (Grade 9)",
+  "Tutor", "Huntington Learning Center", "Plymouth, MN", "Oct. 2013 - Aug. 2014", "Science (Grades 6 - 12)",
+  "Tutor", "Huntington Learning Center", "Plymouth, MN", "Oct. 2013 - Aug. 2014", "Math (Grades 6 - 12)",
+  "Tutor", "Huntington Learning Center", "Plymouth, MN", "Oct. 2013 - Aug. 2014", "ACT (Grades 11 - 12)",
+  "Student Teacher", "Edina High School", "Edina, MN", "Oct. 2013 - Dec. 2013", "Biology (Grade 11)",
+  "Student Teacher", "Edina High School", "Edina, MN", "Oct. 2013 - Dec. 2013", "AP Biology (Grade 12)",
+  "Student Teacher", "Stillwater Junior High", "Stillwater, MN", "Aug. 2013 - Oct. 2013", "Life Sciences (Grade 7)"
 ) %>% 
   detailed_entries(role, dates, company, loc, details)
 ```
@@ -66,61 +74,74 @@ tribble(
 \newpage
 
 
+# Publications
 
 ```{r pubs}
 bibliography_entries("bibs/publications.bib", 
-                     title = "Publications") %>%
+                     title = "",
+                     sorting = "ydnt") %>%
   filter(bibtype == "Article") %>% 
-  arrange(desc(year), author)
-```
-
-## Presentations
-
-  * __Wittman, JT__, and BH Aukema (2018). _Effects of host foliage on the movement behavior of larvae of gypsy moth (Lymantria dispar)._ Oral presentation at the Entomological Society of America, Annual Meeting, November 11 – 14, Vancouver, British Columbia, Canada.
-  * __Wittman, JT__, PH Chaloux, SW Myers, and BH Aukema (2018). _Keeping gypsy moth where they are: Investigating how far gypsy moth larvae can move._ Oral presentation at the Western Forest Insect Work Conference, March 26 - 29, Denver, CO.
-  * __Wittman, JT__, PH Chaloux, SW Myers, and BH Aukema (2018). _Developing science to support practice: Determining distances required to protect log decks from wandering gypsy moth larvae._ Poster presentation at the USDA Interagency Forum on Invasive Species, January 9 – 12, Annapolis, MD.
-  * __Wittman, JT__, SW Myers, PH Chaloux, and BH Aukema (2017). _Evaluating gypsy moth (Lymantria dispar) larval movement potential and effective barriers limiting their movement._ Oral presentation at the Entomological Society of America, Annual Meeting, November 5 – 8, Denver, CO.
-  * __Wittman, JT__, SW Myers, PH Chaloux, and BH Aukema (2017). _Supporting policy with science: Are buffer zones around wood products effective at preventing the spread of gypsy moth (Lymantria dispar)._ Oral presentation at the International Union of Forest Research Organizations - Forest Insects and Pathogens in a Changing Environment: Ecology, Monitoring, and Genetics, September 11 – 15, Thessaloniki, Greece.
-  * __Wittman, JT__, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _Evaluating the effectiveness of buffer zone practices in preventing the spread of gypsy moth (Lymantria dispar)._ Oral presentation at the Gypsy Moth Program Advisory Committee Meeting, November 22, St. Paul, MN.
-  * __Wittman, JT__, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _I Would Walk 500 Miles: Orientation and Movement Potential of Gypsy Moth Larvae in a Simulated Lumber Yard._ Oral presentation at the Annual Gypsy Moth Review, October 25 – 27, Columbus, OH.
-  * Nicoll, RA, __JT Wittman__, SW Myers, D Lance, and BH Aukema (2016). _Do buffer zones prevent the spread of gypsy moth (_Lymantria dispar_) larvae?_ Poster presentation at the Upper Midwest Invasive Species Conference, October 16-19, La Crosse, WI.
-  * __Wittman, J.__, E Stivers, and KJ Larsen (2016). _Bees, Butterflies and Beetles: A Comparison of Remnant and Planted Prairies in Northeast Iowa._ Oral presentation at the Day of Insects, April 9, Ames, IA.
-  * Stivers, E, __JT Wittman__, and KJ Larsen (2015). _A comparison of adult butterfly communities on remnant and planted prairies in Northeast Iowa._ Poster presentation at Entomological Society of America, 63rd Annual Meeting. November 14 – 18, Minneapolis, MN.
-  * __Wittman, JT__, A Weckwerth, and J Enos-Berlage (2012). _Exploring the Dry Run Creek Watershed: Molecules, Microbes, and Macroinvertebrates._ Poster presentation at the Iowa Water Conference. March.
-
-# Awards & Achievements
-## Awards
-```{r}
-tribble(
-  ~ award, ~ from, ~ year,
-  "Commerce Dean's Honour", "Monash", "2017",
-  "Commerce Dean's Commendation", "Monash", "2016",
-  "Science Dean’s List", "Monash", "2014-2016",
-  "International Institute of Forecasters Award", "IIF", "2014",
-  "Rotary Youth Leadership Award", "Rotary", "2013"
-) %>%
-  brief_entries(award, year, from)
-```
-
-## Scholarships
-```{r}
-tribble(
-  ~ scholarship, ~ from, ~ year,
-  "Econometrics Honours Memorial Scholarship", "Monash", "2017",
-  "Monash Community Leaders Scholarship", "Monash", "2015 & 2016",
-  "Mitcham Rotary Scholarship", "Rotary", "2011 & 2012"
-) %>%
-  brief_entries(scholarship, year, from)
+  arrange(desc(year))
+  
 ```
 
 
-## Competitions
+
+# Presentations
+
+  Wittman, JT, JJ Duan, RC Venette, and BH Aukema (2019). _Effect of cooling rate on survival of **Spathius galinae** when exposed to sub-zero temperatures._ Oral presentation at the North Central Forest Pest Workshop, September 23 - 26, Lisle, Illinois.
+  1. Wittman, JT, and BH Aukema (2018). _Effects of host foliage on the movement behavior of larvae of gypsy moth (Lymantria dispar)._ Oral presentation at the Entomological Society of America, Annual Meeting, November 11 – 14, Vancouver, British Columbia, Canada.
+  2. Wittman, JT, PH Chaloux, SW Myers, and BH Aukema (2018). _Keeping gypsy moth where they are: Investigating how far gypsy moth larvae can move._ Oral presentation at the Western Forest Insect Work Conference, March 26 - 29, Denver, CO.
+  3. Wittman, JT, PH Chaloux, SW Myers, and BH Aukema (2018). _Developing science to support practice: Determining distances required to protect log decks from wandering gypsy moth larvae._ Poster presentation at the USDA Interagency Forum on Invasive Species, January 9 – 12, Annapolis, MD.
+  4. Wittman, JT, SW Myers, PH Chaloux, and BH Aukema (2017). _Evaluating gypsy moth (Lymantria dispar) larval movement potential and effective barriers limiting their movement._ Oral presentation at the Entomological Society of America, Annual Meeting, November 5 – 8, Denver, CO.
+  5. Wittman, JT, SW Myers, PH Chaloux, and BH Aukema (2017). _Supporting policy with science: Are buffer zones around wood products effective at preventing the spread of gypsy moth (Lymantria dispar)._ Oral presentation at the International Union of Forest Research Organizations - Forest Insects and Pathogens in a Changing Environment: Ecology, Monitoring, and Genetics, September 11 – 15, Thessaloniki, Greece.
+  6. Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _Evaluating the effectiveness of buffer zone practices in preventing the spread of gypsy moth (Lymantria dispar)._ Oral presentation at the Gypsy Moth Program Advisory Committee Meeting, November 22, St. Paul, MN.
+  7. Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _I Would Walk 500 Miles: Orientation and Movement Potential of Gypsy Moth Larvae in a Simulated Lumber Yard._ Oral presentation at the Annual Gypsy Moth Review, October 25 – 27, Columbus, OH.
+  8. Nicoll, RA, JT Wittman, SW Myers, D Lance, and BH Aukema (2016). _Do buffer zones prevent the spread of gypsy moth (_Lymantria dispar_) larvae?_ Poster presentation at the Upper Midwest Invasive Species Conference, October 16-19, La Crosse, WI.
+  9. Wittman, J., E Stivers, and KJ Larsen (2016). _Bees, Butterflies and Beetles: A Comparison of Remnant and Planted Prairies in Northeast Iowa._ Oral presentation at the Day of Insects, April 9, Ames, IA.
+  10. Stivers, E, JT Wittman, and KJ Larsen (2015). _A comparison of adult butterfly communities on remnant and planted prairies in Northeast Iowa._ Poster presentation at Entomological Society of America, 63rd Annual Meeting. November 14 – 18, Minneapolis, MN.
+  11. Wittman, JT, A Weckwerth, and J Enos-Berlage (2012). _Exploring the Dry Run Creek Watershed: Molecules, Microbes, and Macroinvertebrates._ Poster presentation at the Iowa Water Conference. March.
+
+# Software 
+
+1. Wittman, JT and BH Aukema (2019). _servosphereR: Analyze data generated from SynTech Servosphere trials_. R software package. https://cran.r-project.org/web/packages/servosphereR/. 
+
+\newpage
+
+# Grants
 ```{r}
 tribble(
-  ~ competition, ~ from, ~ year,
-  "UseR! 2018 Datathon Champion", "UseR!", "2018",
-  "RMIT SBITL Analytics Competition Champion", "RMIT", "2017",
-  "RMIT SBITL Analytics Competition Champion", "RMIT", "2016"
+  ~ project, ~ funding, ~ city, ~ year, ~ amount,
+  "Characterizing dispersal of larval gypsy moth to improve quarantine regulations", "Minnesota Invasive Terrestrial Plant and Pest Center", "St. Paul, MN", "2018", "$35,000"
+) %>% 
+  detailed_entries(funding, year, project, city, amount)
+```
+
+
+# Fellowships & Honors
+
+```{r}
+tribble(
+  ~ scholarship, ~ from, ~ city, ~ year, ~ amount,
+  "Chiang Travel Award", "Department of Entomology, University of Minnesota", "St. Paul, MN", "2018", "$200",
+  "Chiang Travel Award", "Department of Entomology, University of Minnesota", "St. Paul, MN", "2017", "$200",
+  "McLaughlin Gormley King (MGK) Fellowship", "Department of Entomology, University of Minnesota", "St. Paul, MN", "2016 - 2017", "$42,600",
+  "Howard Hughes Medical Institute Teacher Scientist Fellowship", "Luther College", "Decorah, IA", "2012 - 2013", "$12,500"
 ) %>%
-  brief_entries(competition, year, from)
+  detailed_entries(from, year, scholarship, city, amount)
+```
+
+
+# Service
+```{r}
+tribble(
+  ~ position, ~ group, ~ year, ~ city,
+  "Volunteer", "Reproducible Research with R Workshop", "2019", "St. Paul, MN",
+  "Grant Reviewer", "Council of Graduate Students, University of Minnesota", "2019", "St. Paul, MN",
+  "President", "Frenatae (Entomology graduate student association, University of Minnesota)", "2019 - present", "St. Paul, MN",
+  "Treasurer", "Frenatae (Entomology graduate student association, University of Minnesota)", "2018 - 2019", "St. Paul, MN",
+  "Insect Education Outreach Coordinator", "Frenatae (Entomology graduate student association, University of Minnesota)", "2017 - 2018", "St. Paul, MN",
+  "Council of Graduate Students Representative", "Frenatae (Entomology graduate student association, University of Minnesota)", "2016 - 2017", "St. Paul, MN"
+) %>% 
+  detailed_entries(group, year, position, city)
 ```
