--- a/CV.tex
+++ b/CV.tex
@@ -38,10 +38,10 @@
 
 % Colors for text
 % Uncomment if you would like to specify your own color
- \definecolor{darktext}{HTML}{000000}
- \definecolor{text}{HTML}{000000}
- \definecolor{graytext}{HTML}{000000}
- \definecolor{lighttext}{HTML}{000000}
+% \definecolor{darktext}{HTML}{414141}
+% \definecolor{text}{HTML}{333333}
+% \definecolor{graytext}{HTML}{5D5D5D}
+% \definecolor{lighttext}{HTML}{999999}
 
 % Set false if you don't want to highlight section with awesome color
 \setbool{acvSectionColorHighlight}{true}
@@ -57,7 +57,7 @@
 %-------------------------------------------------------------------------------
 % Available options: circle|rectangle,edge/noedge,left/right
 
-\name{Jacob Timothy Wittman}{}
+\name{Jacob T. Wittman}{}
 
 \position{PhD Student}
 \address{1980 Folwell Avenue, St.~Paul, MN}
@@ -149,7 +149,7 @@
     \field{year}
   }
 }
-\DeclareBibliographyCategory{bibPublications}
+\DeclareBibliographyCategory{bib}
 \bibliography{bibs/publications.bib}
 
 \begin{document}
@@ -161,8 +161,8 @@
 % Print the footer with 3 arguments(<left>, <center>, <right>)
 % Leave any of these blank if they are not needed
 \makecvfooter
-  {March, 2019}
-  {Jacob Timothy Wittman~~~·~~~Curriculum Vitae}
+  {September, 2019}
+  {Jacob T. Wittman~~~·~~~Curriculum Vitae}
   {\thepage}
 
 
@@ -173,7 +173,8 @@
 
 
 
-\section{Education}\label{education}
+\hypertarget{education}{%
+\section{Education}\label{education}}
 
 \detailedsection{\detaileditem
 {PhD Entomology, Concetration: Forest Entomology, Minor: Biostatistics}
@@ -197,137 +198,199 @@
 {Decorah, IA}
 {\item{GPA of 3.68}}}
 
-\section{Teaching Experience}\label{teaching-experience}
+\hypertarget{teaching-experience}{%
+\section{Teaching Experience}\label{teaching-experience}}
 
 \detailedsection{\detaileditem
-{Teaching Associate}
-{S1 2016 - Present}
-{Monash University}
-{Caulfield \& Clayton, Australia}
-{\item{Advanced statistical modelling (ETC3580)}\item{Business forecasting (ETF3231/ETF5231)}\item{Mathematics for business (ETF2700)}\item{Data modelling and computing (ETC1010)}}\detaileditem
-{Research Assistant}
-{Jan. 2016 - Present}
-{Monash University}
-{Clayton, Australia}
-{\item{Supervisors include Rob Hyndman, Dianne Cook, and George Athanasopoulos.}\item{Consulting projects with DiabetesLab, Tennis Australia, Monash University and Huawei.}\item{Contributed to the development of numerous open source R packages.}}\detaileditem
-{Volunteer}
-{Feb. 2013 - Nov. 2016}
-{Rotaract}
-{Monash, Australia}
-{\item{Development and maintenance of club website and online services.}\item{Organising and hosting fundraisers.}}\detaileditem
-{Student Ambassador}
-{Feb. 2015 - Nov. 2015}
-{Google}
-{Sydney, Australia}
-{\item{Supported Google's presence on campus with events and media.}}\detaileditem
-{Data Mining (Internship)}
-{Feb. 2015 - Mar. 2015}
-{iSelect}
-{Cheltenham, Australia}
-{\item{Improved business data and issue reporting with interactive visualisations, and model-based anomaly detection.}}\detaileditem
-{Fresh Produce}
-{Oct. 2010 - Nov. 2015}
-{Coles}
-{Rowville, Australia}
-{\item{Food preparation \& display, first aid, staff training and customer assistance.}}}
+{Guest Lecturer}
+{Sept. 2019}
+{University of Minnesota}
+{St. Paul, MN}
+{\item{Forest Entomology (ENT 4251)}}\detaileditem
+{Teaching Assistant}
+{Sept. 2018 - Dec. 2018}
+{University of Minnesota}
+{St. Paul, MN}
+{\item{Insect Biology (ENT 1005)}}\detaileditem
+{Science Teacher}
+{Jun. 2014 - Jun. 2016}
+{DREAM Technical Academy}
+{Willmar, MN}
+{\item{Grades 7 - 12}}\detaileditem
+{Long-Term Substitute - Biology}
+{Feb. 2014 - Apr. 2014}
+{Faribault High School}
+{Faribault, MN}
+{\item{Biology (Grade 11)}\item{Integrated Life Science (Grade 9)}}\detaileditem
+{Tutor}
+{Oct. 2013 - Aug. 2014}
+{Huntington Learning Center}
+{Plymouth, MN}
+{\item{Science (Grades 6 - 12)}\item{Math (Grades 6 - 12)}\item{ACT (Grades 11 - 12)}}\detaileditem
+{Student Teacher}
+{Oct. 2013 - Dec. 2013}
+{Edina High School}
+{Edina, MN}
+{\item{Biology (Grade 11)}\item{AP Biology (Grade 12)}}\detaileditem
+{Student Teacher}
+{Aug. 2013 - Oct. 2013}
+{Stillwater Junior High}
+{Stillwater, MN}
+{\item{Life Sciences (Grade 7)}}}
 
 \newpage
 
-\defbibheading{bibPublications}{\subsection{Publications}}
-\addtocategory{bibPublications}{Wittman2019,
+\hypertarget{publications}{%
+\section{Publications}\label{publications}}
+
+\defbibheading{bib}{\subsection{}}
+\addtocategory{bib}{Wittman2019,
 Wittman2018,
+Stivers2019,
 Wittman2017,
 Wittman2013}
-\newrefcontext[sorting=ynt]\setcounter{papers}{0}\pagebreak[3]
-\printbibliography[category=bibPublications,heading=bibPublications]\setcounter{papers}{0}
+\newrefcontext[sorting=ydnt]\setcounter{papers}{0}\pagebreak[3]
+\printbibliography[category=bib,heading=bib]\setcounter{papers}{0}
 
 \nocite{Wittman2019,
 Wittman2018,
+Stivers2019,
 Wittman2017,
 Wittman2013}
 
-\subsection{Presentations}\label{presentations}
+\hypertarget{presentations}{%
+\section{Presentations}\label{presentations}}
 
-\begin{itemize}
+Wittman, JT, JJ Duan, RC Venette, and BH Aukema (2019). \emph{Effect of
+cooling rate on survival of \textbf{Spathius galinae} when exposed to
+sub-zero temperatures.} Oral presentation at the North Central Forest
+Pest Workshop, September 23 - 26, Lisle, Illinois. 1. Wittman, JT, and
+BH Aukema (2018). \emph{Effects of host foliage on the movement behavior
+of larvae of gypsy moth (Lymantria dispar).} Oral presentation at the
+Entomological Society of America, Annual Meeting, November 11 -- 14,
+Vancouver, British Columbia, Canada. 2. Wittman, JT, PH Chaloux, SW
+Myers, and BH Aukema (2018). \emph{Keeping gypsy moth where they are:
+Investigating how far gypsy moth larvae can move.} Oral presentation at
+the Western Forest Insect Work Conference, March 26 - 29, Denver, CO. 3.
+Wittman, JT, PH Chaloux, SW Myers, and BH Aukema (2018).
+\emph{Developing science to support practice: Determining distances
+required to protect log decks from wandering gypsy moth larvae.} Poster
+presentation at the USDA Interagency Forum on Invasive Species, January
+9 -- 12, Annapolis, MD. 4. Wittman, JT, SW Myers, PH Chaloux, and BH
+Aukema (2017). \emph{Evaluating gypsy moth (Lymantria dispar) larval
+movement potential and effective barriers limiting their movement.} Oral
+presentation at the Entomological Society of America, Annual Meeting,
+November 5 -- 8, Denver, CO. 5. Wittman, JT, SW Myers, PH Chaloux, and
+BH Aukema (2017). \emph{Supporting policy with science: Are buffer zones
+around wood products effective at preventing the spread of gypsy moth
+(Lymantria dispar).} Oral presentation at the International Union of
+Forest Research Organizations - Forest Insects and Pathogens in a
+Changing Environment: Ecology, Monitoring, and Genetics, September 11 --
+15, Thessaloniki, Greece. 6. Wittman, JT, PH Chaloux, D Lance, SW Myers,
+and BH Aukema (2016). \emph{Evaluating the effectiveness of buffer zone
+practices in preventing the spread of gypsy moth (Lymantria dispar).}
+Oral presentation at the Gypsy Moth Program Advisory Committee Meeting,
+November 22, St.~Paul, MN. 7. Wittman, JT, PH Chaloux, D Lance, SW
+Myers, and BH Aukema (2016). \emph{I Would Walk 500 Miles: Orientation
+and Movement Potential of Gypsy Moth Larvae in a Simulated Lumber Yard.}
+Oral presentation at the Annual Gypsy Moth Review, October 25 -- 27,
+Columbus, OH. 8. Nicoll, RA, JT Wittman, SW Myers, D Lance, and BH
+Aukema (2016). \emph{Do buffer zones prevent the spread of gypsy moth
+(\emph{Lymantria dispar}) larvae?} Poster presentation at the Upper
+Midwest Invasive Species Conference, October 16-19, La Crosse, WI. 9.
+Wittman, J., E Stivers, and KJ Larsen (2016). \emph{Bees, Butterflies
+and Beetles: A Comparison of Remnant and Planted Prairies in Northeast
+Iowa.} Oral presentation at the Day of Insects, April 9, Ames, IA. 10.
+Stivers, E, JT Wittman, and KJ Larsen (2015). \emph{A comparison of
+adult butterfly communities on remnant and planted prairies in Northeast
+Iowa.} Poster presentation at Entomological Society of America, 63rd
+Annual Meeting. November 14 -- 18, Minneapolis, MN. 11. Wittman, JT, A
+Weckwerth, and J Enos-Berlage (2012). \emph{Exploring the Dry Run Creek
+Watershed: Molecules, Microbes, and Macroinvertebrates.} Poster
+presentation at the Iowa Water Conference. March.
+
+\hypertarget{software}{%
+\section{Software}\label{software}}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  \textbf{Wittman, JT}, and BH Aukema (2018). \emph{Effects of host
-  foliage on the movement behavior of larvae of gypsy moth (Lymantria
-  dispar).} Oral presentation at the Entomological Society of America,
-  Annual Meeting, November 11 -- 14, Vancouver, British Columbia,
-  Canada.
-\item
-  \textbf{Wittman, JT}, PH Chaloux, SW Myers, and BH Aukema (2018).
-  \emph{Keeping gypsy moth where they are: Investigating how far gypsy
-  moth larvae can move.} Oral presentation at the Western Forest Insect
-  Work Conference, March 26 - 29, Denver, CO.
-\item
-  \textbf{Wittman, JT}, PH Chaloux, SW Myers, and BH Aukema (2018).
-  \emph{Developing science to support practice: Determining distances
-  required to protect log decks from wandering gypsy moth larvae.}
-  Poster presentation at the USDA Interagency Forum on Invasive Species,
-  January 9 -- 12, Annapolis, MD.
-\item
-  \textbf{Wittman, JT}, SW Myers, PH Chaloux, and BH Aukema (2017).
-  \emph{Evaluating gypsy moth (Lymantria dispar) larval movement
-  potential and effective barriers limiting their movement.} Oral
-  presentation at the Entomological Society of America, Annual Meeting,
-  November 5 -- 8, Denver, CO.
-\item
-  \textbf{Wittman, JT}, SW Myers, PH Chaloux, and BH Aukema (2017).
-  \emph{Supporting policy with science: Are buffer zones around wood
-  products effective at preventing the spread of gypsy moth (Lymantria
-  dispar).} Oral presentation at the International Union of Forest
-  Research Organizations - Forest Insects and Pathogens in a Changing
-  Environment: Ecology, Monitoring, and Genetics, September 11 -- 15,
-  Thessaloniki, Greece.
-\item
-  \textbf{Wittman, JT}, PH Chaloux, D Lance, SW Myers, and BH Aukema
-  (2016). \emph{Evaluating the effectiveness of buffer zone practices in
-  preventing the spread of gypsy moth (Lymantria dispar).} Oral
-  presentation at the Gypsy Moth Program Advisory Committee Meeting,
-  November 22, St.~Paul, MN.
-\item
-  \textbf{Wittman, JT}, PH Chaloux, D Lance, SW Myers, and BH Aukema
-  (2016). \emph{I Would Walk 500 Miles: Orientation and Movement
-  Potential of Gypsy Moth Larvae in a Simulated Lumber Yard.} Oral
-  presentation at the Annual Gypsy Moth Review, October 25 -- 27,
-  Columbus, OH.
-\item
-  Nicoll, RA, \textbf{JT Wittman}, SW Myers, D Lance, and BH Aukema
-  (2016). \emph{Do buffer zones prevent the spread of gypsy moth
-  (\emph{Lymantria dispar}) larvae?} Poster presentation at the Upper
-  Midwest Invasive Species Conference, October 16-19, La Crosse, WI.
-\item
-  \textbf{Wittman, J.}, E Stivers, and KJ Larsen (2016). \emph{Bees,
-  Butterflies and Beetles: A Comparison of Remnant and Planted Prairies
-  in Northeast Iowa.} Oral presentation at the Day of Insects, April 9,
-  Ames, IA.
-\item
-  Stivers, E, \textbf{JT Wittman}, and KJ Larsen (2015). \emph{A
-  comparison of adult butterfly communities on remnant and planted
-  prairies in Northeast Iowa.} Poster presentation at Entomological
-  Society of America, 63rd Annual Meeting. November 14 -- 18,
-  Minneapolis, MN.
-\item
-  \textbf{Wittman, JT}, A Weckwerth, and J Enos-Berlage (2012).
-  \emph{Exploring the Dry Run Creek Watershed: Molecules, Microbes, and
-  Macroinvertebrates.} Poster presentation at the Iowa Water Conference.
-  March.
-\end{itemize}
+  Wittman, JT and BH Aukema (2019). \emph{servosphereR: Analyze data
+  generated from SynTech Servosphere trials}. R software package.
+  \url{https://cran.r-project.org/web/packages/servosphereR/}.
+\end{enumerate}
 
-\section{Awards \& Achievements}\label{awards-achievements}
+\newpage
 
-\subsection{Awards}\label{awards}
+\hypertarget{grants}{%
+\section{Grants}\label{grants}}
 
-\briefsection{\briefitem{Commerce Dean's Honour}{2017}{Monash}\briefitem{Commerce Dean's Commendation}{2016}{Monash}\briefitem{Science Dean’s List}{2014-2016}{Monash}\briefitem{International Institute of Forecasters Award}{2014}{IIF}\briefitem{Rotary Youth Leadership Award}{2013}{Rotary}}
+\detailedsection{\detaileditem
+{Minnesota Invasive Terrestrial Plant and Pest Center}
+{2018}
+{Characterizing dispersal of larval gypsy moth to improve quarantine regulations}
+{St. Paul, MN}
+{\item{\$35,000}}}
 
-\subsection{Scholarships}\label{scholarships}
+\hypertarget{fellowships-honors}{%
+\section{Fellowships \& Honors}\label{fellowships-honors}}
 
-\briefsection{\briefitem{Econometrics Honours Memorial Scholarship}{2017}{Monash}\briefitem{Monash Community Leaders Scholarship}{2015 \& 2016}{Monash}\briefitem{Mitcham Rotary Scholarship}{2011 \& 2012}{Rotary}}
+\detailedsection{\detaileditem
+{Department of Entomology, University of Minnesota}
+{2018}
+{Chiang Travel Award}
+{St. Paul, MN}
+{\item{\$200}}\detaileditem
+{Department of Entomology, University of Minnesota}
+{2017}
+{Chiang Travel Award}
+{St. Paul, MN}
+{\item{\$200}}\detaileditem
+{Department of Entomology, University of Minnesota}
+{2016 - 2017}
+{McLaughlin Gormley King (MGK) Fellowship}
+{St. Paul, MN}
+{\item{\$42,600}}\detaileditem
+{Luther College}
+{2012 - 2013}
+{Howard Hughes Medical Institute Teacher Scientist Fellowship}
+{Decorah, IA}
+{\item{\$12,500}}}
 
-\subsection{Competitions}\label{competitions}
+\hypertarget{service}{%
+\section{Service}\label{service}}
 
-\briefsection{\briefitem{UseR! 2018 Datathon Champion}{2018}{UseR!}\briefitem{RMIT SBITL Analytics Competition Champion}{2017}{RMIT}\briefitem{RMIT SBITL Analytics Competition Champion}{2016}{RMIT}}
+\detailedsection{\detaileditem
+{Reproducible Research with R Workshop}
+{2019}
+{Volunteer}
+{St. Paul, MN}
+{\empty}\detaileditem
+{Council of Graduate Students, University of Minnesota}
+{2019}
+{Grant Reviewer}
+{St. Paul, MN}
+{\empty}\detaileditem
+{Frenatae (Entomology graduate student association, University of Minnesota)}
+{2019 - present}
+{President}
+{St. Paul, MN}
+{\empty}\detaileditem
+{Frenatae (Entomology graduate student association, University of Minnesota)}
+{2018 - 2019}
+{Treasurer}
+{St. Paul, MN}
+{\empty}\detaileditem
+{Frenatae (Entomology graduate student association, University of Minnesota)}
+{2017 - 2018}
+{Insect Education Outreach Coordinator}
+{St. Paul, MN}
+{\empty}\detaileditem
+{Frenatae (Entomology graduate student association, University of Minnesota)}
+{2016 - 2017}
+{Council of Graduate Students Representative}
+{St. Paul, MN}
+{\empty}}
 
 \end{document}
