--- a/bibs/publications.bib
+++ b/bibs/publications.bib
@@ -1,3 +1,21 @@
+@article{Wittman2013,
+abstract = {Pathogens are the number one cause of impairments of assessed rivers and streams in the USA and pose a significant human health hazard. The Dry Run Creek Watershed in Northeast Iowa has been designated as impaired by the State of Iowa because of high levels of Escherichia coli bacteria. To investigate the nature of this impairment, land use and stream bank assessments were coupled with comprehensive water quality monitoring. Physical, chemical, and biological parameters were measured at 13 different sites in the watershed, including pH, temperature, conductivity, dissolved oxygen, turbidity, total Kjeldahl nitrogen, ammonia-N, nitrate + nitrite-N, total phosphorus, and E. coli. In addition, benthic macroinvertebrate communities were analyzed at seven sites, and optical brightener tests were performed late in the season. Results identified segments of the watershed that were more prominent contributors of E. coli, and correlations were observed between levels of E. coli and several chemical parameters, including ammonia-N, total Kjeldahl nitrogen, and total phosphorus. Interestingly, distinct sites emerged as more prominent contributors of these elements during rain vs. non-rain events, suggesting different types of sources. Both the amount of rainfall and the time elapsed between the rain event and the sampling influenced E. coli levels during wet weather conditions. Nitrate + nitrite-N displayed a unique response to rain events compared with the other parameters, suggesting a different delivery route. Analyses of benthic macroinvertebrate communities were consistent with pollution trends. Collectively, these data suggest distinct agriculturally related E. coli contributions, as well as specific areas and practices for water quality improvement strategies. This study can serve as a resource for evaluating agricultural watersheds that are impaired for bacteria.},
+author = {Wittman, Jacob and Weckwerth, Andrew and Weiss, Chelsea and Heyer, Sharon and Seibert, Jacob and Kuennen, Ben and Ingels, Chad and Seigley, Lynette and Larsen, Kirk and Enos-Berlage, Jodi},
+doi = {10.1007/s10661-013-3340-y},
+file = {:C$\backslash$:/Users/Jake/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Wittman et al. - 2013 - Evaluation of land use and water quality in an agricultural watershed in the USA indicates multiple sources of b.pdf:pdf},
+issn = {01676369},
+journal = {Environmental Monitoring and Assessment},
+keywords = {Benthic macroinvertebrates,E. coli,Livestock,Nitrogen,Phosphorus,Water quality,published},
+mendeley-tags = {published},
+number = {12},
+pages = {10395--10420},
+pmid = {23873513},
+publisher = {Springer Netherlands},
+title = {{Evaluation of land use and water quality in an agricultural watershed in the USA indicates multiple sources of bacterial impairment}},
+url = {http://link.springer.com/10.1007/s10661-013-3340-y},
+volume = {185},
+year = {2013}
+}
 @article{Wittman2019,
 author = {Wittman, Jacob T. and Nicoll, Rachael A. and Myers, Scott W. and Chaloux, Paul H. and Aukema, Brian H.},
 journal = {Environmental Entomology, In Press},
@@ -6,18 +24,10 @@ mendeley-tags = {in press},
 title = {{Characterizing and simulating the movement of late instar gypsy moth (Lepidoptera: Erebidae) to evaluate the effectiveness of regulatory practices.}},
 year = {2019}
 }
-@article{Wittman2018,
-author = {Wittman, Jacob T. and Aukema, Brian H.},
-journal = {Journal of Insect Behavior, In Review},
-keywords = {in review},
-mendeley-tags = {in review},
-title = {{Foliage type and availability alters the movement behavior of late instar European gypsy moth Lymantria dispar (Lepidoptera: Erebidae)}},
-year = {2018}
-}
 @article{Wittman2017,
 author = {Wittman, Jacob and Stivers, Emma and Larsen, Kirk},
 doi = {10.18473/lepi.71i2.a9},
-file = {:C$\backslash$:/Users/wittm094/Documents/Mendeley Desktop/Wittman, Stivers, Larsen - 2017 - Butterfly Surveys are Impacted by Time of Day.pdf:pdf},
+file = {:C$\backslash$:/Users/Jake/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Wittman, Stivers, Larsen - 2017 - Butterfly Surveys are Impacted by Time of Day.pdf:pdf},
 issn = {0024-0966},
 journal = {Journal of the Lepidopterists' Society},
 keywords = {Decorah,Iowa,diurnal variation,published,time of day,unified butterfly recorder},
@@ -28,22 +38,19 @@ title = {{Butterfly Surveys are Impacted by Time of Day}},
 volume = {71},
 year = {2017}
 }
-@article{Wittman2013,
-abstract = {Pathogens are the number one cause of impairments of assessed rivers and streams in the USA and pose a significant human health hazard. The Dry Run Creek Watershed in Northeast Iowa has been designated as impaired by the State of Iowa because of high levels of Escherichia coli bacteria. To investigate the nature of this impairment, land use and stream bank assessments were coupled with comprehensive water quality monitoring. Physical, chemical, and biological parameters were measured at 13 different sites in the watershed, including pH, temperature, conductivity, dissolved oxygen, turbidity, total Kjeldahl nitrogen, ammonia-N, nitrate + nitrite-N, total phosphorus, and E. coli. In addition, benthic macroinvertebrate communities were analyzed at seven sites, and optical brightener tests were performed late in the season. Results identified segments of the watershed that were more prominent contributors of E. coli, and correlations were observed between levels of E. coli and several chemical parameters, including ammonia-N, total Kjeldahl nitrogen, and total phosphorus. Interestingly, distinct sites emerged as more prominent contributors of these elements during rain vs. non-rain events, suggesting different types of sources. Both the amount of rainfall and the time elapsed between the rain event and the sampling influenced E. coli levels during wet weather conditions. Nitrate + nitrite-N displayed a unique response to rain events compared with the other parameters, suggesting a different delivery route. Analyses of benthic macroinvertebrate communities were consistent with pollution trends. Collectively, these data suggest distinct agriculturally related E. coli contributions, as well as specific areas and practices for water quality improvement strategies. This study can serve as a resource for evaluating agricultural watersheds that are impaired for bacteria.},
-author = {Wittman, Jacob and Weckwerth, Andrew and Weiss, Chelsea and Heyer, Sharon and Seibert, Jacob and Kuennen, Ben and Ingels, Chad and Seigley, Lynette and Larsen, Kirk and Enos-Berlage, Jodi},
-doi = {10.1007/s10661-013-3340-y},
-file = {:C$\backslash$:/Users/wittm094/Documents/Mendeley Desktop/Wittman et al. - 2013 - Evaluation of land use and water quality in an agricultural watershed in the USA indicates multiple sources of b.pdf:pdf},
-issn = {01676369},
-journal = {Environmental Monitoring and Assessment},
-keywords = {Benthic macroinvertebrates,E. coli,Livestock,Nitrogen,Phosphorus,Water quality,published},
-mendeley-tags = {published},
-month = {dec},
-number = {12},
-pages = {10395--10420},
-pmid = {23873513},
-publisher = {Springer Netherlands},
-title = {{Evaluation of land use and water quality in an agricultural watershed in the USA indicates multiple sources of bacterial impairment}},
-url = {http://link.springer.com/10.1007/s10661-013-3340-y},
-volume = {185},
-year = {2013}
+@article{Wittman2018,
+author = {Wittman, Jacob T. and Aukema, Brian H.},
+journal = {Journal of Insect Behavior, In Press},
+keywords = {in review},
+mendeley-tags = {in review},
+title = {{Foliage type and availability alters the movement behavior of late instar European gypsy moth Lymantria dispar (Lepidoptera: Erebidae)}},
+year = {2019}
+}
+@article{Stivers2019,
+author = {Stivers, Emma K. and Wittman, Jacob T. and Larsen, Kirk J.},
+journal = {Journal of the Lepidopterists' Society},
+number = {4},
+title = {{A comparison of adult butterfly communities on remnant and planted prairies in northeast Iowa}},
+volume = {73},
+year = {2019}
 }
