--- a/bibs/publications.bib
+++ b/bibs/publications.bib
@@ -1,8 +1,48 @@
+@article{Stivers2019,
+author = {Stivers, Emma K. and Wittman, Jacob T. and Larsen, Kirk J.},
+journal = {Journal of the Lepidopterists' Society},
+keywords = {published},
+mendeley-tags = {published},
+number = {4},
+title = {{A comparison of adult butterfly communities on remnant and planted prairies in northeast Iowa}},
+volume = {73},
+year = {2019}
+}
+@article{Wittman2018,
+abstract = {The movement behavior ofinsects character- izes their ability to disperse, establish, compete, forage, seek mates, and ultimately reproduce. Understanding the movement of invasive insects is particularly impor- tant for developing management policies.We conducted laboratory experiments in Minnesota, USA to determine how host type and food deprivation affected the move- ment of late instars of the European gypsy moth Lymantria dispar (Lepidoptera: Erebidae), an invasive forest insect in North America. Gypsy moth larvae can feed on over 300 species of trees and shrubs. During outbreaks food availability to conspecifics can become severely restricted as developing instars consume in- creasing amounts of foliage. Larvae were raised on one of five foods: Quercus macrocarpa, Larix laricina, Acer platanoides, Acer saccharinum, or artificial diet. Subsets of fifth and sixth instar larvae were also de- prived of food for zero, 24, or 48 h. After the food deprivation period, late instar larvae were placed on a servosphere and their movement paths were recorded. Larvae raised on Q. macrocarpa, a preferred host, were unlikely to move unless starved. They moved farther the longer they were starved. In contrast, when larvae were raised on less preferred hosts, they were more likely to move without prior starvation. These results suggest that feeding on optimal hosts provides gypsy moth larvae J. T. Wittman (*) : B. H. Aukema Department ofEntomology, University ofMinnesota, 1980 Folwell Avenue, St. Paul, MN 55108, USA e-mail: wittm094@umn.edu with the energy and nutritional requirements to move more quickly to more food when there is none immedi- ately available. Keywords},
+author = {Wittman, Jacob T. and Aukema, Brian H.},
+doi = {10.1007/s10905-019-09711-2},
+file = {:C$\backslash$:/Users/wittm094/Documents/Mendeley Desktop/Wittman, Aukema - 2019 - Foliage Type and Deprivation Alters the Movement Behavior of Late Instar European Gypsy Moth Lymantria dispar (.pdf:pdf},
+issn = {08927553},
+journal = {Journal of Insect Behavior},
+keywords = {Foliage,Locomotion compensator,Lymantria dispar,Movement behavior,Servosphere,published},
+mendeley-tags = {published},
+number = {1},
+pages = {24--37},
+title = {{Foliage Type and Deprivation Alters the Movement Behavior of Late Instar European Gypsy Moth Lymantria dispar (Lepidoptera: Erebidae)}},
+url = {https://link.springer.com/article/10.1007/s10905-019-09711-2},
+volume = {32},
+year = {2019}
+}
+@article{Wittman2017,
+author = {Wittman, Jacob and Stivers, Emma and Larsen, Kirk},
+doi = {10.18473/lepi.71i2.a9},
+file = {:C$\backslash$:/Users/wittm094/Documents/Mendeley Desktop/Wittman, Stivers, Larsen - 2017 - Butterfly Surveys are Impacted by Time of Day.pdf:pdf},
+issn = {0024-0966},
+journal = {Journal of the Lepidopterists' Society},
+keywords = {Decorah,Iowa,diurnal variation,published,time of day,unified butterfly recorder},
+mendeley-tags = {published},
+number = {2},
+pages = {125--129},
+title = {{Butterfly Surveys are Impacted by Time of Day}},
+volume = {71},
+year = {2017}
+}
 @article{Wittman2013,
 abstract = {Pathogens are the number one cause of impairments of assessed rivers and streams in the USA and pose a significant human health hazard. The Dry Run Creek Watershed in Northeast Iowa has been designated as impaired by the State of Iowa because of high levels of Escherichia coli bacteria. To investigate the nature of this impairment, land use and stream bank assessments were coupled with comprehensive water quality monitoring. Physical, chemical, and biological parameters were measured at 13 different sites in the watershed, including pH, temperature, conductivity, dissolved oxygen, turbidity, total Kjeldahl nitrogen, ammonia-N, nitrate + nitrite-N, total phosphorus, and E. coli. In addition, benthic macroinvertebrate communities were analyzed at seven sites, and optical brightener tests were performed late in the season. Results identified segments of the watershed that were more prominent contributors of E. coli, and correlations were observed between levels of E. coli and several chemical parameters, including ammonia-N, total Kjeldahl nitrogen, and total phosphorus. Interestingly, distinct sites emerged as more prominent contributors of these elements during rain vs. non-rain events, suggesting different types of sources. Both the amount of rainfall and the time elapsed between the rain event and the sampling influenced E. coli levels during wet weather conditions. Nitrate + nitrite-N displayed a unique response to rain events compared with the other parameters, suggesting a different delivery route. Analyses of benthic macroinvertebrate communities were consistent with pollution trends. Collectively, these data suggest distinct agriculturally related E. coli contributions, as well as specific areas and practices for water quality improvement strategies. This study can serve as a resource for evaluating agricultural watersheds that are impaired for bacteria.},
 author = {Wittman, Jacob and Weckwerth, Andrew and Weiss, Chelsea and Heyer, Sharon and Seibert, Jacob and Kuennen, Ben and Ingels, Chad and Seigley, Lynette and Larsen, Kirk and Enos-Berlage, Jodi},
 doi = {10.1007/s10661-013-3340-y},
-file = {:C$\backslash$:/Users/Jake/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Wittman et al. - 2013 - Evaluation of land use and water quality in an agricultural watershed in the USA indicates multiple sources of b.pdf:pdf},
+file = {:C$\backslash$:/Users/wittm094/Documents/Mendeley Desktop/Wittman et al. - 2013 - Evaluation of land use and water quality in an agricultural watershed in the USA indicates multiple sources of b.pdf:pdf},
 issn = {01676369},
 journal = {Environmental Monitoring and Assessment},
 keywords = {Benthic macroinvertebrates,E. coli,Livestock,Nitrogen,Phosphorus,Water quality,published},
@@ -16,41 +56,37 @@ url = {http://link.springer.com/10.1007/s10661-013-3340-y},
 volume = {185},
 year = {2013}
 }
+@article{Short,
+author = {Short, Mara and Chase, Kevin and Feeley, Tivon and Kees, Aubree and Wittman, Jacob and Aukema, Brian},
+journal = {Agricultural and Forest Entomology},
+keywords = {review},
+mendeley-tags = {review},
+title = {{Rail transport as a vector of emerald ash borer}},
+volume = {In review},
+year = {2019}
+}
+@article{Hallinen,
+author = {Hallinen, Marie J. and Wittman, Jacob T. and Aukema, Brian H.},
+journal = {Biodiversity and Conservation},
+keywords = {review},
+mendeley-tags = {review},
+title = {{Factors associated with diversity and distribution of buprestid prey captured by foraging Cerceris fumipennis Say (Hymenoptera: Crabronidae)}},
+volume = {In review},
+year = {2019}
+}
 @article{Wittman2019,
-author = {Wittman, Jacob T. and Nicoll, Rachael A. and Myers, Scott W. and Chaloux, Paul H. and Aukema, Brian H.},
-journal = {Environmental Entomology, In Press},
-keywords = {in press},
-mendeley-tags = {in press},
-title = {{Characterizing and simulating the movement of late instar gypsy moth (Lepidoptera: Erebidae) to evaluate the effectiveness of regulatory practices.}},
-year = {2019}
-}
-@article{Wittman2017,
-author = {Wittman, Jacob and Stivers, Emma and Larsen, Kirk},
-doi = {10.18473/lepi.71i2.a9},
-file = {:C$\backslash$:/Users/Jake/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Wittman, Stivers, Larsen - 2017 - Butterfly Surveys are Impacted by Time of Day.pdf:pdf},
-issn = {0024-0966},
-journal = {Journal of the Lepidopterists' Society},
-keywords = {Decorah,Iowa,diurnal variation,published,time of day,unified butterfly recorder},
+abstract = {The European gypsy moth, Lymantria dispar L., is an invasive insect in North America that feeds on over 300 species of trees and shrubs and occasionally causes extensive defoliation. One regulatory practice within quarantine zones to slow the spread of this insect recommends that wood products (e.g., logs, pulpwood) originating from quarantine areas are staged within 100 foot-radius buffer zones devoid of host vegetation before transport outside the quarantine boundary. Currently, there are little data underpinning the distance used. We conducted field experiments in Wisconsin to assess buffer zone efficacy in reducing risk of larval gypsy moth encroachment on wood staging areas. We released late-instar gypsy moth larvae in groups around the perimeter of a 100-ft radius zone and tracked their movements for 10-h periods using harmonic radar and tested whether host vegetation staged around the perimeter or food availability before release altered movement patterns. Three larvae moved over 300 ft in 10 h, but 93{\%} of larvae moved {\textless}100 ft total. The presence of host vegetation reduced the likelihood of larvae entering the buffer zone by 70{\%}. Food availability before release did not affect movement. Using these field data, we parameterized a Monte Carlo simulation model to evaluate risk of larvae crossing zones of different sizes. For zones {\textgreater}100 ft in radius, {\textless}4{\%} of larvae reached the center. This percentage decreased as zone size increased. Implications of these results for the regulatory practices of the gypsy moth quarantine are discussed.},
+author = {Wittman, Jacob T and Nicoll, Rachael A and Myers, Scott W and Chaloux, Paul H and Aukema, Brian H},
+doi = {10.1093/ee/nvz025},
+file = {:C$\backslash$:/Users/wittm094/Documents/Mendeley Desktop/Wittman et al. - 2019 - Characterizing and Simulating the Movement of Late-Instar Gypsy Moth (Lepidoptera Erebidae) to Evaluate the E(2).pdf:pdf},
+issn = {0046-225X},
+journal = {Environmental Entomology},
+keywords = {published},
 mendeley-tags = {published},
-number = {2},
-pages = {125--129},
-title = {{Butterfly Surveys are Impacted by Time of Day}},
-volume = {71},
-year = {2017}
-}
-@article{Wittman2018,
-author = {Wittman, Jacob T. and Aukema, Brian H.},
-journal = {Journal of Insect Behavior, In Press},
-keywords = {in review},
-mendeley-tags = {in review},
-title = {{Foliage type and availability alters the movement behavior of late instar European gypsy moth Lymantria dispar (Lepidoptera: Erebidae)}},
-year = {2019}
-}
-@article{Stivers2019,
-author = {Stivers, Emma K. and Wittman, Jacob T. and Larsen, Kirk J.},
-journal = {Journal of the Lepidopterists' Society},
-number = {4},
-title = {{A comparison of adult butterfly communities on remnant and planted prairies in northeast Iowa}},
-volume = {73},
+number = {3},
+pages = {496--505},
+title = {{Characterizing and Simulating the Movement of Late-Instar Gypsy Moth (Lepidoptera: Erebidae) to Evaluate the Effectiveness of Regulatory Practices}},
+url = {https://academic.oup.com/ee/advance-article/doi/10.1093/ee/nvz025/5429494},
+volume = {48},
 year = {2019}
 }
