--- a/CV.tex
+++ b/CV.tex
@@ -149,7 +149,7 @@
     \field{year}
   }
 }
-\DeclareBibliographyCategory{bib-bibs/publications.bib-4124723}
+\DeclareBibliographyCategory{bib-bibs/publications.bib-3813863}
 \bibliography{bibs/publications.bib}
 
 \begin{document}
@@ -178,13 +178,13 @@
 \section{Education}\label{education}}
 
 \detailedsection{\detaileditem{PhD Entomology, Concentration: Forest Entomology, Minor: Biostatistics}{Sept. 2018 - 2022 (anticipated)}{University of Minnesota}{St. Paul, MN}{\item{Dissertation Topic: Emerald ash borer biocontrol modeling 
-}}\detaileditem{MSc Entomology, Concetration: Forest Entomology}{Jun. 2016 - Sept. 2018}{University of Minnesota}{St. Paul, MN}{\item{GPA of 4.00}\item{Thesis Title: Effects of host type and food deprivation on the movement behavior of late-instar larvae of gypsy moth Lymantria dispar (Lepidoptera: Erebidae)}}\detaileditem{Teaching License in Secondary Education Biology}{Sept. 2012 - Dec. 2013}{Luther College}{Decorah, IA}{\item{GPA of 4.00}}\detaileditem{BA in Biology \& Environmental Studies}{Sept. 2008 - May 2012}{Luther College}{Decorah, IA}{\item{GPA of 3.68}}}
+}\\}\detaileditem{MSc Entomology, Concetration: Forest Entomology}{Jun. 2016 - Sept. 2018}{University of Minnesota}{St. Paul, MN}{\item{GPA of 4.00}\item{Thesis Title: Effects of host type and food deprivation on the movement behavior of late-instar larvae of gypsy moth Lymantria dispar (Lepidoptera: Erebidae)}\\}\detaileditem{Teaching License in Secondary Education Biology}{Sept. 2012 - Dec. 2013}{Luther College}{Decorah, IA}{\item{GPA of 4.00}\\}\detaileditem{BA in Biology \& Environmental Studies}{Sept. 2008 - May 2012}{Luther College}{Decorah, IA}{\item{GPA of 3.68}}}
 
 \hypertarget{publications}{%
 \section{Publications}\label{publications}}
 
-\defbibheading{bib-bibs/publications.bib-4124723}{}
-\addtocategory{bib-bibs/publications.bib-4124723}{Short,
+\defbibheading{bib-bibs/publications.bib-3813863}{}
+\addtocategory{bib-bibs/publications.bib-3813863}{Short,
 Hallinen,
 Stivers2019,
 Wittman2018,
@@ -192,7 +192,7 @@ Wittman2019,
 Wittman2017,
 Wittman2013}
 \newrefcontext[sorting=none]\setcounter{papers}{0}\pagebreak[3]
-\printbibliography[category=bib-bibs/publications.bib-4124723,heading=none]\setcounter{papers}{0}
+\printbibliography[category=bib-bibs/publications.bib-3813863,heading=none]\setcounter{papers}{0}
 
 \nocite{Short,
 Hallinen,
@@ -202,14 +202,24 @@ Wittman2019,
 Wittman2017,
 Wittman2013}
 
-\hypertarget{presentations}{%
-\section{Presentations}\label{presentations}}
+\hypertarget{invited-presentations}{%
+\section{Invited Presentations}\label{invited-presentations}}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  Wittman, JT, JJ Duan, RC Venette, and BH Aukema (2019). \emph{Effect of cooling rate on survival of \textbf{Spathius galinae} when exposed to sub-zero temperatures.} Oral presentation at the North Central Forest Pest Workshop, September 23 - 26, Lisle, Illinois.
+  Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). \emph{I Would Walk 500 Miles: Orientation and Movement Potential of Gypsy Moth Larvae in a Simulated Lumber Yard.} Oral presentation at the Annual Gypsy Moth Review, October 25 -- 27, Columbus, OH.
+\end{enumerate}
+
+\hypertarget{contributed-presentations}{%
+\section{Contributed Presentations}\label{contributed-presentations}}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Wittman, JT, JJ Duan, RC Venette, and BH Aukema (2019). \emph{Effect of cooling rate on survival of Spathius galinae when exposed to sub-zero temperatures.} Oral presentation at the North Central Forest Pest Workshop, September 23 - 26, Lisle, Illinois.
 \item
   Wittman, JT, and BH Aukema (2018). \emph{Effects of host foliage on the movement behavior of larvae of gypsy moth (Lymantria dispar).} Oral presentation at the Entomological Society of America, Annual Meeting, November 11 -- 14, Vancouver, British Columbia, Canada.
 \item
@@ -223,8 +233,6 @@ Wittman2013}
 \item
   Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). \emph{Evaluating the effectiveness of buffer zone practices in preventing the spread of gypsy moth (Lymantria dispar).} Oral presentation at the Gypsy Moth Program Advisory Committee Meeting, November 22, St.~Paul, MN.
 \item
-  Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). \emph{I Would Walk 500 Miles: Orientation and Movement Potential of Gypsy Moth Larvae in a Simulated Lumber Yard.} Oral presentation at the Annual Gypsy Moth Review, October 25 -- 27, Columbus, OH.
-\item
   Nicoll, RA, JT Wittman, SW Myers, D Lance, and BH Aukema (2016). \emph{Do buffer zones prevent the spread of gypsy moth (\emph{Lymantria dispar}) larvae?} Poster presentation at the Upper Midwest Invasive Species Conference, October 16-19, La Crosse, WI.
 \item
   Wittman, J., E Stivers, and KJ Larsen (2016). \emph{Bees, Butterflies and Beetles: A Comparison of Remnant and Planted Prairies in Northeast Iowa.} Oral presentation at the Day of Insects, April 9, Ames, IA.
@@ -237,7 +245,7 @@ Wittman2013}
 \hypertarget{teaching-experience}{%
 \section{Teaching Experience}\label{teaching-experience}}
 
-\detailedsection{\detaileditem{Guest Lecturer}{Sept. 2019}{University of Minnesota}{St. Paul, MN}{\item{Forest Entomology (ENT 4251)}}\detaileditem{Teaching Assistant}{Sept. 2018 - Dec. 2018}{University of Minnesota}{St. Paul, MN}{\item{Insect Biology (ENT 1005)}}\detaileditem{Science Teacher}{Jun. 2014 - Jun. 2016}{DREAM Technical Academy}{Willmar, MN}{\item{Grades 7 - 12}}\detaileditem{Long-Term Substitute - Biology}{Feb. 2014 - Apr. 2014}{Faribault High School}{Faribault, MN}{\item{Biology (Grade 11)}\item{Integrated Life Science (Grade 9)}}\detaileditem{Tutor}{Oct. 2013 - Aug. 2014}{Huntington Learning Center}{Plymouth, MN}{\item{Science (Grades 6 - 12)}\item{Math (Grades 6 - 12)}\item{ACT (Grades 11 - 12)}}\detaileditem{Student Teacher}{Oct. 2013 - Dec. 2013}{Edina High School}{Edina, MN}{\item{Biology (Grade 11)}\item{AP Biology (Grade 12)}}\detaileditem{Student Teacher}{Aug. 2013 - Oct. 2013}{Stillwater Junior High}{Stillwater, MN}{\item{Life Sciences (Grade 7)}}}
+\detailedsection{\detaileditem{Guest Lecturer}{Sept. 2019}{University of Minnesota}{St. Paul, MN}{\item{Forest Entomology (ENT 4251)}\\}\detaileditem{Teaching Assistant}{Sept. 2018 - Dec. 2018}{University of Minnesota}{St. Paul, MN}{\item{Insect Biology (ENT 1005)}\\}\detaileditem{Science Teacher}{Jun. 2014 - Jun. 2016}{DREAM Technical Academy}{Willmar, MN}{\item{Grades 7 - 12}\\}\detaileditem{Long-Term Substitute - Biology}{Feb. 2014 - Apr. 2014}{Faribault High School}{Faribault, MN}{\item{Biology (Grade 11)}\item{Integrated Life Science (Grade 9)}\\}\detaileditem{Tutor}{Oct. 2013 - Aug. 2014}{Huntington Learning Center}{Plymouth, MN}{\item{Science (Grades 6 - 12)}\item{Math (Grades 6 - 12)}\item{ACT (Grades 11 - 12)}\\}\detaileditem{Student Teacher}{Oct. 2013 - Dec. 2013}{Edina High School}{Edina, MN}{\item{Biology (Grade 11)}\item{AP Biology (Grade 12)}\\}\detaileditem{Student Teacher}{Aug. 2013 - Oct. 2013}{Stillwater Junior High}{Stillwater, MN}{\item{Life Sciences (Grade 7)}}}
 
 \hypertarget{software}{%
 \section{Software}\label{software}}
@@ -249,19 +257,19 @@ Wittman2013}
   Wittman, JT and BH Aukema (2019). \emph{servosphereR: Analyze data generated from SynTech Servosphere trials}. R software package. \url{https://cran.r-project.org/web/packages/servosphereR/}.
 \end{enumerate}
 
-\hypertarget{grants}{%
-\section{Grants}\label{grants}}
+\hypertarget{grants-fellowships-honors}{%
+\section{Grants, Fellowships, \& Honors}\label{grants-fellowships-honors}}
 
-\detailedsection{\detaileditem{Minnesota Invasive Terrestrial Plant and Pest Center}{2018}{Characterizing dispersal of larval gypsy moth to improve quarantine regulations}{St. Paul, MN}{\item{\$35,000}}}
-
-\hypertarget{fellowships-honors}{%
-\section{Fellowships \& Honors}\label{fellowships-honors}}
-
-\detailedsection{\detaileditem{Department of Entomology, University of Minnesota}{2018}{Chiang Travel Award}{St. Paul, MN}{\item{\$200}}\detaileditem{Department of Entomology, University of Minnesota}{2017}{Chiang Travel Award}{St. Paul, MN}{\item{\$200}}\detaileditem{Department of Entomology, University of Minnesota}{2016 - 2017}{McLaughlin Gormley King (MGK) Fellowship}{St. Paul, MN}{\item{\$42,600}}\detaileditem{Luther College}{2012 - 2013}{Howard Hughes Medical Institute Teacher Scientist Fellowship}{Decorah, IA}{\item{\$12,500}}}
+\detailedsection{\detaileditem{Department of Entomology, University of Minnesota}{2018}{Chiang Travel Award}{St. Paul, MN}{\item{\$200}\\}\detaileditem{Minnesota Invasive Terrestrial Plant and Pest Center}{2018}{Characterizing dispersal of larval gypsy moth to improve quarantine regulations}{St. Paul, MN}{\item{\$35,000}\\}\detaileditem{Department of Entomology, University of Minnesota}{2017}{Chiang Travel Award}{St. Paul, MN}{\item{\$200}\\}\detaileditem{Department of Entomology, University of Minnesota}{2016 - 2017}{McLaughlin Gormley King (MGK) Fellowship}{St. Paul, MN}{\item{\$42,600}\\}\detaileditem{Luther College}{2012 - 2013}{Howard Hughes Medical Institute Teacher Scientist Fellowship}{Decorah, IA}{\item{\$12,500}}}
 
 \hypertarget{service}{%
 \section{Service}\label{service}}
 
-\detailedsection{\detaileditem{North Central Forest Pest Workshop}{2019}{Student Competition Organizer}{Lisle, IL}{\empty}\detaileditem{Reproducible Research with R Workshop}{2019}{Volunteer}{St. Paul, MN}{\empty}\detaileditem{Council of Graduate Students, University of Minnesota}{2019}{Grant Reviewer}{St. Paul, MN}{\empty}\detaileditem{Frenatae (Entomology graduate student association, University of Minnesota)}{2019 - present}{President}{St. Paul, MN}{\empty}\detaileditem{Frenatae (Entomology graduate student association, University of Minnesota)}{2018 - 2019}{Treasurer}{St. Paul, MN}{\empty}\detaileditem{Frenatae (Entomology graduate student association, University of Minnesota)}{2017 - 2018}{Insect Education Outreach Coordinator}{St. Paul, MN}{\empty}\detaileditem{Frenatae (Entomology graduate student association, University of Minnesota)}{2016 - 2017}{Council of Graduate Students Representative}{St. Paul, MN}{\empty}}
+\detailedsection{\detaileditem{Frenatae (Entomology graduate student association, University of Minnesota)}{2019 - present}{President}{St. Paul, MN}{\empty}\detaileditem{North Central Forest Pest Workshop}{2019}{Student Presentation Organizer}{Lisle, IL}{\empty}\detaileditem{Reproducible Research with R Workshop}{2019}{Volunteer}{St. Paul, MN}{\empty}\detaileditem{Council of Graduate Students, University of Minnesota}{2019}{Grant Reviewer}{St. Paul, MN}{\empty}\detaileditem{Frenatae (Entomology graduate student association, University of Minnesota)}{2018 - 2019}{Treasurer}{St. Paul, MN}{\empty}\detaileditem{Frenatae (Entomology graduate student association, University of Minnesota)}{2017 - 2018}{Insect Education Outreach Coordinator}{St. Paul, MN}{\empty}\detaileditem{Frenatae (Entomology graduate student association, University of Minnesota)}{2016 - 2017}{Council of Graduate Students Representative}{St. Paul, MN}{\empty}}
+
+\hypertarget{peer-review-service}{%
+\section{Peer Review Service}\label{peer-review-service}}
+
+\briefsection{\briefitem{Journal of Economic Entomology}{Journals}{2019}\briefitem{Council of Graduate Students Travel and Professional Development Grants}{Grants}{2019}}
 
 \end{document}
