--- a/CV.Rmd
+++ b/CV.Rmd
@@ -37,7 +37,7 @@ knitr::opts_chunk$set(echo = FALSE)
   # - If funded, Farm Bill trapping grant
 
 # Adjusts to .tex
-  # - Add `\\` (without `) after each \detailedentry but only if they DON'T have a \empty preceeding them to fix the spacing issues
+  # - Add `\\` (without `) after each \detaileditem full entry but only if they DON'T have a \empty preceeding them to fix the spacing issues
 ```
 
 
@@ -64,22 +64,23 @@ bibliography_entries("bibs/publications.bib") %>%
   
 ```
 
+# Invited Presentations
+  
+  1. Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _I Would Walk 500 Miles: Orientation and Movement Potential of Gypsy Moth Larvae in a Simulated Lumber Yard._ Oral presentation at the Annual Gypsy Moth Review, October 25 – 27, Columbus, OH.
 
+# Contributed Presentations
 
-# Presentations
-
-  1. Wittman, JT, JJ Duan, RC Venette, and BH Aukema (2019). _Effect of cooling rate on survival of **Spathius galinae** when exposed to sub-zero temperatures._ Oral presentation at the North Central Forest Pest Workshop, September 23 - 26, Lisle, Illinois.
+  1. Wittman, JT, JJ Duan, RC Venette, and BH Aukema (2019). _Effect of cooling rate on survival of Spathius galinae when exposed to sub-zero temperatures._ Oral presentation at the North Central Forest Pest Workshop, September 23 - 26, Lisle, Illinois.
   2. Wittman, JT, and BH Aukema (2018). _Effects of host foliage on the movement behavior of larvae of gypsy moth (Lymantria dispar)._ Oral presentation at the Entomological Society of America, Annual Meeting, November 11 – 14, Vancouver, British Columbia, Canada.
   3. Wittman, JT, PH Chaloux, SW Myers, and BH Aukema (2018). _Keeping gypsy moth where they are: Investigating how far gypsy moth larvae can move._ Oral presentation at the Western Forest Insect Work Conference, March 26 - 29, Denver, CO.
   4. Wittman, JT, PH Chaloux, SW Myers, and BH Aukema (2018). _Developing science to support practice: Determining distances required to protect log decks from wandering gypsy moth larvae._ Poster presentation at the USDA Interagency Forum on Invasive Species, January 9 – 12, Annapolis, MD.
   5. Wittman, JT, SW Myers, PH Chaloux, and BH Aukema (2017). _Evaluating gypsy moth (Lymantria dispar) larval movement potential and effective barriers limiting their movement._ Oral presentation at the Entomological Society of America, Annual Meeting, November 5 – 8, Denver, CO.
   6. Wittman, JT, SW Myers, PH Chaloux, and BH Aukema (2017). _Supporting policy with science: Are buffer zones around wood products effective at preventing the spread of gypsy moth (Lymantria dispar)._ Oral presentation at the International Union of Forest Research Organizations - Forest Insects and Pathogens in a Changing Environment: Ecology, Monitoring, and Genetics, September 11 – 15, Thessaloniki, Greece.
   7. Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _Evaluating the effectiveness of buffer zone practices in preventing the spread of gypsy moth (Lymantria dispar)._ Oral presentation at the Gypsy Moth Program Advisory Committee Meeting, November 22, St. Paul, MN.
-  8. Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _I Would Walk 500 Miles: Orientation and Movement Potential of Gypsy Moth Larvae in a Simulated Lumber Yard._ Oral presentation at the Annual Gypsy Moth Review, October 25 – 27, Columbus, OH.
-  9. Nicoll, RA, JT Wittman, SW Myers, D Lance, and BH Aukema (2016). _Do buffer zones prevent the spread of gypsy moth (_Lymantria dispar_) larvae?_ Poster presentation at the Upper Midwest Invasive Species Conference, October 16-19, La Crosse, WI.
-  10. Wittman, J., E Stivers, and KJ Larsen (2016). _Bees, Butterflies and Beetles: A Comparison of Remnant and Planted Prairies in Northeast Iowa._ Oral presentation at the Day of Insects, April 9, Ames, IA.
-  11. Stivers, E, JT Wittman, and KJ Larsen (2015). _A comparison of adult butterfly communities on remnant and planted prairies in Northeast Iowa._ Poster presentation at Entomological Society of America, 63rd Annual Meeting. November 14 – 18, Minneapolis, NM.
-  12. Wittman, JT, A Weckwerth, and J Enos-Berlage (2012). _Exploring the Dry Run Creek Watershed: Molecules, Microbes, and Macroinvertebrates._ Poster presentation at the Iowa Water Conference. March.
+  8. Nicoll, RA, JT Wittman, SW Myers, D Lance, and BH Aukema (2016). _Do buffer zones prevent the spread of gypsy moth (_Lymantria dispar_) larvae?_ Poster presentation at the Upper Midwest Invasive Species Conference, October 16-19, La Crosse, WI.
+  9. Wittman, J., E Stivers, and KJ Larsen (2016). _Bees, Butterflies and Beetles: A Comparison of Remnant and Planted Prairies in Northeast Iowa._ Oral presentation at the Day of Insects, April 9, Ames, IA.
+  10. Stivers, E, JT Wittman, and KJ Larsen (2015). _A comparison of adult butterfly communities on remnant and planted prairies in Northeast Iowa._ Poster presentation at Entomological Society of America, 63rd Annual Meeting. November 14 – 18, Minneapolis, NM.
+  11. Wittman, JT, A Weckwerth, and J Enos-Berlage (2012). _Exploring the Dry Run Creek Watershed: Molecules, Microbes, and Macroinvertebrates._ Poster presentation at the Iowa Water Conference. March.
 
 # Teaching Experience
 ```{r}
@@ -106,25 +107,19 @@ tribble(
 1. Wittman, JT and BH Aukema (2019). _servosphereR: Analyze data generated from SynTech Servosphere trials_. R software package. https://cran.r-project.org/web/packages/servosphereR/. 
 
 
-
-# Grants
-```{r}
-tribble(
-  ~ project, ~ funding, ~ city, ~ year, ~ amount,
-  "Characterizing dispersal of larval gypsy moth to improve quarantine regulations", "Minnesota Invasive Terrestrial Plant and Pest Center", "St. Paul, MN", "2018", "$35,000"
-) %>% 
-  detailed_entries(funding, year, project, city, amount)
-```
-
-
-# Fellowships & Honors
+# Grants, Fellowships, & Honors
 
 ```{r}
 tribble(
   ~ scholarship, ~ from, ~ city, ~ year, ~ amount,
   "Chiang Travel Award", "Department of Entomology, University of Minnesota", "St. Paul, MN", "2018", "$200",
+  
+  "Characterizing dispersal of larval gypsy moth to improve quarantine regulations", "Minnesota Invasive Terrestrial Plant and Pest Center", "St. Paul, MN", "2018", "$35,000",
+  
   "Chiang Travel Award", "Department of Entomology, University of Minnesota", "St. Paul, MN", "2017", "$200",
+  
   "McLaughlin Gormley King (MGK) Fellowship", "Department of Entomology, University of Minnesota", "St. Paul, MN", "2016 - 2017", "$42,600",
+  
   "Howard Hughes Medical Institute Teacher Scientist Fellowship", "Luther College", "Decorah, IA", "2012 - 2013", "$12,500"
 ) %>%
   detailed_entries(from, year, scholarship, city, amount)
@@ -135,13 +130,33 @@ tribble(
 ```{r}
 tribble(
   ~ position, ~ group, ~ year, ~ city,
-  "Student Competition Organizer", "North Central Forest Pest Workshop", "2019", "Lisle, IL",
-  "Volunteer", "Reproducible Research with R Workshop", "2019", "St. Paul, MN",
-  "Grant Reviewer", "Council of Graduate Students, University of Minnesota", "2019", "St. Paul, MN",
   "President", "Frenatae (Entomology graduate student association, University of Minnesota)", "2019 - present", "St. Paul, MN",
-  "Treasurer", "Frenatae (Entomology graduate student association, University of Minnesota)", "2018 - 2019", "St. Paul, MN",
-  "Insect Education Outreach Coordinator", "Frenatae (Entomology graduate student association, University of Minnesota)", "2017 - 2018", "St. Paul, MN",
-  "Council of Graduate Students Representative", "Frenatae (Entomology graduate student association, University of Minnesota)", "2016 - 2017", "St. Paul, MN"
+  
+  "Student Presentation Organizer", "North Central Forest Pest Workshop", "2019", "Lisle, IL", 
+  
+  "Volunteer", "Reproducible Research with R Workshop", "2019", "St. Paul, MN", 
+  
+  "Grant Reviewer", "Council of Graduate Students, University of Minnesota", "2019", "St. Paul, MN", 
+  
+  "Treasurer", "Frenatae (Entomology graduate student association, University of Minnesota)", "2018 - 2019", "St. Paul, MN", 
+  
+  "Insect Education Outreach Coordinator", "Frenatae (Entomology graduate student association, University of Minnesota)", "2017 - 2018", "St. Paul, MN", 
+  
+  "Council of Graduate Students Representative", "Frenatae (Entomology graduate student association, University of Minnesota)", "2016 - 2017", "St. Paul, MN", 
 ) %>% 
   detailed_entries(group, year, position, city)
+```
+
+# Peer Review Service 
+```{r peer_review_notes, include = FALSE}
+# To add more entries for journals or grants enter empty quotes for the ~type variable
+```
+```{r}
+tribble(
+  ~ type, ~ specifics, ~ year,
+  "Journals", "Journal of Economic Entomology", "2019",
+  
+  "Grants", "Council of Graduate Students Travel and Professional Development Grants", "2019" 
+) %>% 
+  brief_entries(specifics, type, year)
 ```
