--- a/CV.tex
+++ b/CV.tex
@@ -149,7 +149,7 @@
     \field{year}
   }
 }
-\DeclareBibliographyCategory{bib-bibs/publications.bib-3813863}
+\DeclareBibliographyCategory{bib-bibs/publications.bib-5638825}
 \bibliography{bibs/publications.bib}
 
 \begin{document}
@@ -162,7 +162,7 @@
 % Leave any of these blank if they are not needed
 % 2019-02-14 Chris Umphlett - add flexibility to the document name in footer, rather than have it be static Curriculum Vitae
 \makecvfooter
-  {October, 2019}
+  {November, 2019}
     {Jacob T. Wittman~~~·~~~Curriculum Vitae}
   {\thepage}
 
@@ -178,27 +178,25 @@
 \section{Education}\label{education}}
 
 \detailedsection{\detaileditem{PhD Entomology, Concentration: Forest Entomology, Minor: Biostatistics}{Sept. 2018 - 2022 (anticipated)}{University of Minnesota}{St. Paul, MN}{\item{Dissertation Topic: Emerald ash borer biocontrol modeling 
-}\\}\detaileditem{MSc Entomology, Concetration: Forest Entomology}{Jun. 2016 - Sept. 2018}{University of Minnesota}{St. Paul, MN}{\item{GPA of 4.00}\item{Thesis Title: Effects of host type and food deprivation on the movement behavior of late-instar larvae of gypsy moth Lymantria dispar (Lepidoptera: Erebidae)}\\}\detaileditem{Teaching License in Secondary Education Biology}{Sept. 2012 - Dec. 2013}{Luther College}{Decorah, IA}{\item{GPA of 4.00}\\}\detaileditem{BA in Biology \& Environmental Studies}{Sept. 2008 - May 2012}{Luther College}{Decorah, IA}{\item{GPA of 3.68}}}
+}}\detaileditem{MSc Entomology, Concetration: Forest Entomology}{Jun. 2016 - Sept. 2018}{University of Minnesota}{St. Paul, MN}{\item{GPA of 4.00}\item{Thesis Title: Effects of host type and food deprivation on the movement behavior of late-instar larvae of gypsy moth Lymantria dispar (Lepidoptera: Erebidae)}}\detaileditem{Teaching License in Secondary Education Biology}{Sept. 2012 - Dec. 2013}{Luther College}{Decorah, IA}{\item{GPA of 4.00}}\detaileditem{BA in Biology \& Environmental Studies}{Sept. 2008 - May 2012}{Luther College}{Decorah, IA}{\item{GPA of 3.68}}}
 
 \hypertarget{publications}{%
 \section{Publications}\label{publications}}
 
-\defbibheading{bib-bibs/publications.bib-3813863}{}
-\addtocategory{bib-bibs/publications.bib-3813863}{Short,
-Hallinen,
+\defbibheading{bib-bibs/publications.bib-5638825}{}
+\addtocategory{bib-bibs/publications.bib-5638825}{Short,
+Wittman2019,
 Stivers2019,
 Wittman2018,
-Wittman2019,
 Wittman2017,
 Wittman2013}
 \newrefcontext[sorting=none]\setcounter{papers}{0}\pagebreak[3]
-\printbibliography[category=bib-bibs/publications.bib-3813863,heading=none]\setcounter{papers}{0}
+\printbibliography[category=bib-bibs/publications.bib-5638825,heading=none]\setcounter{papers}{0}
 
 \nocite{Short,
-Hallinen,
+Wittman2019,
 Stivers2019,
 Wittman2018,
-Wittman2019,
 Wittman2017,
 Wittman2013}
 
@@ -208,6 +206,8 @@ Wittman2013}
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
+\item
+  Wittman, JT, RA Nicoll, SW Myers, PH Chaloux, and BH Aukema (2019). \emph{What You Eat Affects How You Move: Links Between Caterpillar Behavior and Gypsy Moth Management.} Oral presentation at the Annual Gypsy Moth Review, November 5 - 7, Seattle, WA.
 \item
   Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). \emph{I Would Walk 500 Miles: Orientation and Movement Potential of Gypsy Moth Larvae in a Simulated Lumber Yard.} Oral presentation at the Annual Gypsy Moth Review, October 25 -- 27, Columbus, OH.
 \end{enumerate}
@@ -219,7 +219,9 @@ Wittman2013}
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  Wittman, JT, JJ Duan, RC Venette, and BH Aukema (2019). \emph{Effect of cooling rate on survival of Spathius galinae when exposed to sub-zero temperatures.} Oral presentation at the North Central Forest Pest Workshop, September 23 - 26, Lisle, Illinois.
+  Wittman, JT (2019). \emph{Replicability and open science in entomology.} Oral presentation given at the Department of Entomology, University of Minnesota, October 22, St.~Paul, MN.
+\item
+  Wittman, JT, JJ Duan, RC Venette, and BH Aukema (2019). \emph{Effect of cooling rate on survival of Spathius galinae when exposed to sub-zero temperatures.} Oral presentation at the North Central Forest Pest Workshop, September 23 - 26, Lisle, IL.
 \item
   Wittman, JT, and BH Aukema (2018). \emph{Effects of host foliage on the movement behavior of larvae of gypsy moth (Lymantria dispar).} Oral presentation at the Entomological Society of America, Annual Meeting, November 11 -- 14, Vancouver, British Columbia, Canada.
 \item
@@ -245,7 +247,7 @@ Wittman2013}
 \hypertarget{teaching-experience}{%
 \section{Teaching Experience}\label{teaching-experience}}
 
-\detailedsection{\detaileditem{Guest Lecturer}{Sept. 2019}{University of Minnesota}{St. Paul, MN}{\item{Forest Entomology (ENT 4251)}\\}\detaileditem{Teaching Assistant}{Sept. 2018 - Dec. 2018}{University of Minnesota}{St. Paul, MN}{\item{Insect Biology (ENT 1005)}\\}\detaileditem{Science Teacher}{Jun. 2014 - Jun. 2016}{DREAM Technical Academy}{Willmar, MN}{\item{Grades 7 - 12}\\}\detaileditem{Long-Term Substitute - Biology}{Feb. 2014 - Apr. 2014}{Faribault High School}{Faribault, MN}{\item{Biology (Grade 11)}\item{Integrated Life Science (Grade 9)}\\}\detaileditem{Tutor}{Oct. 2013 - Aug. 2014}{Huntington Learning Center}{Plymouth, MN}{\item{Science (Grades 6 - 12)}\item{Math (Grades 6 - 12)}\item{ACT (Grades 11 - 12)}\\}\detaileditem{Student Teacher}{Oct. 2013 - Dec. 2013}{Edina High School}{Edina, MN}{\item{Biology (Grade 11)}\item{AP Biology (Grade 12)}\\}\detaileditem{Student Teacher}{Aug. 2013 - Oct. 2013}{Stillwater Junior High}{Stillwater, MN}{\item{Life Sciences (Grade 7)}}}
+\detailedsection{\detaileditem{Guest Lecturer}{Sept. 2019}{University of Minnesota}{St. Paul, MN}{\item{Forest Entomology (ENT 4251)}}\detaileditem{Teaching Assistant}{Sept. 2018 - Dec. 2018}{University of Minnesota}{St. Paul, MN}{\item{Insect Biology (ENT 1005)}}\detaileditem{Science Teacher}{Jun. 2014 - Jun. 2016}{DREAM Technical Academy}{Willmar, MN}{\item{Grades 7 - 12}}\detaileditem{Long-Term Substitute - Biology}{Feb. 2014 - Apr. 2014}{Faribault High School}{Faribault, MN}{\item{Biology (Grade 11)}\item{Integrated Life Science (Grade 9)}}\detaileditem{Tutor}{Oct. 2013 - Aug. 2014}{Huntington Learning Center}{Plymouth, MN}{\item{Science (Grades 6 - 12)}\item{Math (Grades 6 - 12)}\item{ACT (Grades 11 - 12)}}\detaileditem{Student Teacher}{Oct. 2013 - Dec. 2013}{Edina High School}{Edina, MN}{\item{Biology (Grade 11)}\item{AP Biology (Grade 12)}}\detaileditem{Student Teacher}{Aug. 2013 - Oct. 2013}{Stillwater Junior High}{Stillwater, MN}{\item{Life Sciences (Grade 7)}}}
 
 \hypertarget{software}{%
 \section{Software}\label{software}}
@@ -260,7 +262,7 @@ Wittman2013}
 \hypertarget{grants-fellowships-honors}{%
 \section{Grants, Fellowships, \& Honors}\label{grants-fellowships-honors}}
 
-\detailedsection{\detaileditem{Department of Entomology, University of Minnesota}{2018}{Chiang Travel Award}{St. Paul, MN}{\item{\$200}\\}\detaileditem{Minnesota Invasive Terrestrial Plant and Pest Center}{2018}{Characterizing dispersal of larval gypsy moth to improve quarantine regulations}{St. Paul, MN}{\item{\$35,000}\\}\detaileditem{Department of Entomology, University of Minnesota}{2017}{Chiang Travel Award}{St. Paul, MN}{\item{\$200}\\}\detaileditem{Department of Entomology, University of Minnesota}{2016 - 2017}{McLaughlin Gormley King (MGK) Fellowship}{St. Paul, MN}{\item{\$42,600}\\}\detaileditem{Luther College}{2012 - 2013}{Howard Hughes Medical Institute Teacher Scientist Fellowship}{Decorah, IA}{\item{\$12,500}}}
+\detailedsection{\detaileditem{University of Minnesota}{2019}{Council of Graduate Students Travel Grant}{St. Paul, MN}{\item{\$205}}\detaileditem{Department of Entomology, University of Minnesota}{2018}{Chiang Travel Award}{St. Paul, MN}{\item{\$200}}\detaileditem{Minnesota Invasive Terrestrial Plant and Pest Center}{2018}{Characterizing dispersal of larval gypsy moth to improve quarantine regulations}{St. Paul, MN}{\item{\$35,000}}\detaileditem{Department of Entomology, University of Minnesota}{2017}{Chiang Travel Award}{St. Paul, MN}{\item{\$200}}\detaileditem{Department of Entomology, University of Minnesota}{2016 - 2017}{McLaughlin Gormley King (MGK) Fellowship}{St. Paul, MN}{\item{\$42,600}}\detaileditem{Luther College}{2012 - 2013}{Howard Hughes Medical Institute Teacher Scientist Fellowship}{Decorah, IA}{\item{\$12,500}}}
 
 \hypertarget{service}{%
 \section{Service}\label{service}}
