--- a/CV.Rmd
+++ b/CV.Rmd
@@ -31,9 +31,7 @@ knitr::opts_chunk$set(echo = FALSE)
 # end of the new line
 
 # Things to add
-  # - Manuscript review service
-  # - Update Stivers et al. once published
-  # - ESA, Non-thesis seminar, AGMR 2019
+  # - ESA
   # - If funded, Farm Bill trapping grant
 
 # Adjusts to .tex
@@ -47,8 +45,10 @@ knitr::opts_chunk$set(echo = FALSE)
 tribble(
   ~ degree, ~ uni, ~ loc, ~ dates, ~ details,
   "PhD Entomology, Concentration: Forest Entomology, Minor: Biostatistics", "University of Minnesota", "St. Paul, MN", "Sept. 2018 - 2022 (anticipated)", "Dissertation Topic: Emerald ash borer biocontrol modeling \n",
+  
   "MSc Entomology, Concetration: Forest Entomology", "University of Minnesota", "St. Paul, MN", "Jun. 2016 - Sept. 2018", "GPA of 4.00",
   "MSc Entomology, Concetration: Forest Entomology", "University of Minnesota", "St. Paul, MN", "Jun. 2016 - Sept. 2018", "Thesis Title: Effects of host type and food deprivation on the movement behavior of late-instar larvae of gypsy moth Lymantria dispar (Lepidoptera: Erebidae)",
+  
   "Teaching License in Secondary Education Biology", "Luther College", "Decorah, IA", "Sept. 2012 - Dec. 2013", "GPA of 4.00",
   "BA in Biology & Environmental Studies", "Luther College", "Decorah, IA", "Sept. 2008 - May 2012", "GPA of 3.68"
 ) %>% 
@@ -66,28 +66,32 @@ bibliography_entries("bibs/publications.bib") %>%
 
 # Invited Presentations
   
-  1. Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _I Would Walk 500 Miles: Orientation and Movement Potential of Gypsy Moth Larvae in a Simulated Lumber Yard._ Oral presentation at the Annual Gypsy Moth Review, October 25 – 27, Columbus, OH.
+  1. Wittman, JT, RA Nicoll, SW Myers, PH Chaloux, and BH Aukema (2019). _What You Eat Affects How You Move: Links Between Caterpillar Behavior and Gypsy Moth Management._ Oral presentation at the Annual Gypsy Moth Review, November 5 - 7, Seattle, WA.
+  2. Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _I Would Walk 500 Miles: Orientation and Movement Potential of Gypsy Moth Larvae in a Simulated Lumber Yard._ Oral presentation at the Annual Gypsy Moth Review, October 25 – 27, Columbus, OH.
 
 # Contributed Presentations
 
-  1. Wittman, JT, JJ Duan, RC Venette, and BH Aukema (2019). _Effect of cooling rate on survival of Spathius galinae when exposed to sub-zero temperatures._ Oral presentation at the North Central Forest Pest Workshop, September 23 - 26, Lisle, Illinois.
-  2. Wittman, JT, and BH Aukema (2018). _Effects of host foliage on the movement behavior of larvae of gypsy moth (Lymantria dispar)._ Oral presentation at the Entomological Society of America, Annual Meeting, November 11 – 14, Vancouver, British Columbia, Canada.
-  3. Wittman, JT, PH Chaloux, SW Myers, and BH Aukema (2018). _Keeping gypsy moth where they are: Investigating how far gypsy moth larvae can move._ Oral presentation at the Western Forest Insect Work Conference, March 26 - 29, Denver, CO.
-  4. Wittman, JT, PH Chaloux, SW Myers, and BH Aukema (2018). _Developing science to support practice: Determining distances required to protect log decks from wandering gypsy moth larvae._ Poster presentation at the USDA Interagency Forum on Invasive Species, January 9 – 12, Annapolis, MD.
-  5. Wittman, JT, SW Myers, PH Chaloux, and BH Aukema (2017). _Evaluating gypsy moth (Lymantria dispar) larval movement potential and effective barriers limiting their movement._ Oral presentation at the Entomological Society of America, Annual Meeting, November 5 – 8, Denver, CO.
-  6. Wittman, JT, SW Myers, PH Chaloux, and BH Aukema (2017). _Supporting policy with science: Are buffer zones around wood products effective at preventing the spread of gypsy moth (Lymantria dispar)._ Oral presentation at the International Union of Forest Research Organizations - Forest Insects and Pathogens in a Changing Environment: Ecology, Monitoring, and Genetics, September 11 – 15, Thessaloniki, Greece.
-  7. Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _Evaluating the effectiveness of buffer zone practices in preventing the spread of gypsy moth (Lymantria dispar)._ Oral presentation at the Gypsy Moth Program Advisory Committee Meeting, November 22, St. Paul, MN.
-  8. Nicoll, RA, JT Wittman, SW Myers, D Lance, and BH Aukema (2016). _Do buffer zones prevent the spread of gypsy moth (_Lymantria dispar_) larvae?_ Poster presentation at the Upper Midwest Invasive Species Conference, October 16-19, La Crosse, WI.
-  9. Wittman, J., E Stivers, and KJ Larsen (2016). _Bees, Butterflies and Beetles: A Comparison of Remnant and Planted Prairies in Northeast Iowa._ Oral presentation at the Day of Insects, April 9, Ames, IA.
-  10. Stivers, E, JT Wittman, and KJ Larsen (2015). _A comparison of adult butterfly communities on remnant and planted prairies in Northeast Iowa._ Poster presentation at Entomological Society of America, 63rd Annual Meeting. November 14 – 18, Minneapolis, NM.
-  11. Wittman, JT, A Weckwerth, and J Enos-Berlage (2012). _Exploring the Dry Run Creek Watershed: Molecules, Microbes, and Macroinvertebrates._ Poster presentation at the Iowa Water Conference. March.
+  1. Wittman, JT (2019). _Replicability and open science in entomology._ Oral presentation given at the Department of Entomology, University of Minnesota, October 22, St. Paul, MN.
+  2. Wittman, JT, JJ Duan, RC Venette, and BH Aukema (2019). _Effect of cooling rate on survival of Spathius galinae when exposed to sub-zero temperatures._ Oral presentation at the North Central Forest Pest Workshop, September 23 - 26, Lisle, IL.
+  3. Wittman, JT, and BH Aukema (2018). _Effects of host foliage on the movement behavior of larvae of gypsy moth (Lymantria dispar)._ Oral presentation at the Entomological Society of America, Annual Meeting, November 11 – 14, Vancouver, British Columbia, Canada.
+  4. Wittman, JT, PH Chaloux, SW Myers, and BH Aukema (2018). _Keeping gypsy moth where they are: Investigating how far gypsy moth larvae can move._ Oral presentation at the Western Forest Insect Work Conference, March 26 - 29, Denver, CO.
+  5. Wittman, JT, PH Chaloux, SW Myers, and BH Aukema (2018). _Developing science to support practice: Determining distances required to protect log decks from wandering gypsy moth larvae._ Poster presentation at the USDA Interagency Forum on Invasive Species, January 9 – 12, Annapolis, MD.
+  6. Wittman, JT, SW Myers, PH Chaloux, and BH Aukema (2017). _Evaluating gypsy moth (Lymantria dispar) larval movement potential and effective barriers limiting their movement._ Oral presentation at the Entomological Society of America, Annual Meeting, November 5 – 8, Denver, CO.
+  7. Wittman, JT, SW Myers, PH Chaloux, and BH Aukema (2017). _Supporting policy with science: Are buffer zones around wood products effective at preventing the spread of gypsy moth (Lymantria dispar)._ Oral presentation at the International Union of Forest Research Organizations - Forest Insects and Pathogens in a Changing Environment: Ecology, Monitoring, and Genetics, September 11 – 15, Thessaloniki, Greece.
+  8. Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _Evaluating the effectiveness of buffer zone practices in preventing the spread of gypsy moth (Lymantria dispar)._ Oral presentation at the Gypsy Moth Program Advisory Committee Meeting, November 22, St. Paul, MN.
+  9. Nicoll, RA, JT Wittman, SW Myers, D Lance, and BH Aukema (2016). _Do buffer zones prevent the spread of gypsy moth (_Lymantria dispar_) larvae?_ Poster presentation at the Upper Midwest Invasive Species Conference, October 16-19, La Crosse, WI.
+  10. Wittman, J., E Stivers, and KJ Larsen (2016). _Bees, Butterflies and Beetles: A Comparison of Remnant and Planted Prairies in Northeast Iowa._ Oral presentation at the Day of Insects, April 9, Ames, IA.
+  11. Stivers, E, JT Wittman, and KJ Larsen (2015). _A comparison of adult butterfly communities on remnant and planted prairies in Northeast Iowa._ Poster presentation at Entomological Society of America, 63rd Annual Meeting. November 14 – 18, Minneapolis, NM.
+  12. Wittman, JT, A Weckwerth, and J Enos-Berlage (2012). _Exploring the Dry Run Creek Watershed: Molecules, Microbes, and Macroinvertebrates._ Poster presentation at the Iowa Water Conference. March.
 
 # Teaching Experience
 ```{r}
 tribble(
   ~ role, ~ company, ~ loc, ~ dates, ~ details,
   "Guest Lecturer", "University of Minnesota", "St. Paul, MN", "Sept. 2019", "Forest Entomology (ENT 4251)",
+  
   "Teaching Assistant", "University of Minnesota", "St. Paul, MN", "Sept. 2018 - Dec. 2018", "Insect Biology (ENT 1005)",
+  
   "Science Teacher", "DREAM Technical Academy", "Willmar, MN", "Jun. 2014 - Jun. 2016", "Grades 7 - 12",
   "Long-Term Substitute - Biology", "Faribault High School", "Faribault, MN", "Feb. 2014 - Apr. 2014", "Biology (Grade 11)",
    "Long-Term Substitute - Biology", "Faribault High School", "Faribault, MN", "Feb. 2014 - Apr. 2014", "Integrated Life Science (Grade 9)",
@@ -112,6 +116,8 @@ tribble(
 ```{r}
 tribble(
   ~ scholarship, ~ from, ~ city, ~ year, ~ amount,
+  "Council of Graduate Students Travel Grant", "University of Minnesota", "St. Paul, MN", "2019", "$205",
+  
   "Chiang Travel Award", "Department of Entomology, University of Minnesota", "St. Paul, MN", "2018", "$200",
   
   "Characterizing dispersal of larval gypsy moth to improve quarantine regulations", "Minnesota Invasive Terrestrial Plant and Pest Center", "St. Paul, MN", "2018", "$35,000",
